--- a/다울 2024-05-31.md
+++ b/다울 2024-05-31.md
@@ -14,7 +14,7 @@ Tomorrow: [[다울 2024-06-01]]
 
 ## 오늘 작업 목표
 - [x] 업무일지 6월달 ✅ 2024-05-31
-- [ ] 6월 화면 마무리하기까지 남은 거, 
+- [x] 6월 화면 마무리하기까지 남은 거, ✅ 2024-08-12
 이슈 - 서로 공유
 연구노트 다음 주 수요일까지
 - [x] 셀클릭, 셀 더블클릭 ✅ 2024-05-31
