--- a/다울 2024-07-22.md
+++ b/다울 2024-07-22.md
@@ -14,7 +14,7 @@ Tomorrow: [[다울 2024-07-23]]
 
 
 ## 오늘 작업 목표
-- [ ] 수요일 오후 3시 개인 영상 점검
+- [x] 수요일 오후 3시 개인 영상 점검 ✅ 2024-08-12
 - [x] 영상 촬영용 화면 ✅ 2024-07-30
 	- [x] 선석 명칭 변경 1부두, 2부두, 3부두 ... ✅ 2024-07-30
 	- [x] 하역기 명칭 변경 1호기, 2호기, 3호기 ... ✅ 2024-07-30
