--- a/다울 2024-08-09.md
+++ b/다울 2024-08-09.md
@@ -29,215 +29,8 @@ Tomorrow: [[다울 2024-08-10]]
 
 
 ## 정리가 필요한 메모는 아래에
-
-내 id는 2004 선작현, 2006 하작계
-
-
-```cs
-#region dataGridView 관련
-    private void InitializedataGridViewRouteUpdate()
-    {
-        _dgvRouteUpdate = new DataGridView();
-        pan_routeUpdate.Controls.Add(_dgvRouteUpdate);
-        _dgvRouteUpdate.Dock = DockStyle.Fill;
-        _dgvRouteUpdate.Margin = new Padding(0);
-        _dgvRouteUpdate.BorderStyle = BorderStyle.None;
-
-        _dgvRouteUpdate.AllowUserToAddRows = false;
-        _dgvRouteUpdate.SelectionMode = DataGridViewSelectionMode.CellSelect;
-        _dgvRouteUpdate.RowHeadersVisible = false;
-        _dgvRouteUpdate.ColumnHeadersHeightSizeMode = DataGridViewColumnHeadersHeightSizeMode.DisableResizing;
-        _dgvRouteUpdate.ColumnHeadersHeight = 25;
-        _dgvRouteUpdate.RowTemplate.Height = 25;
-        _dgvRouteUpdate.EnableHeadersVisualStyles = false;
-        _dgvRouteUpdate.ColumnHeadersDefaultCellStyle.BackColor = ColorTranslator.FromHtml("#444D54");
-        _dgvRouteUpdate.ColumnHeadersDefaultCellStyle.ForeColor = Color.FromArgb(244, 244, 244);
-        _dgvRouteUpdate.ColumnHeadersDefaultCellStyle.Alignment = DataGridViewContentAlignment.MiddleCenter;
-        _dgvRouteUpdate.ColumnHeadersBorderStyle = DataGridViewHeaderBorderStyle.Single;
-        //_dgvRouteUpdate.BackgroundColor = ColorTranslator.FromHtml("#343B41");
-        //_dgvRouteUpdate.GridColor = ColorTranslator.FromHtml("#444D54");
-        _dgvRouteUpdate.DefaultCellStyle.Font = FontManager.FontDataGridView2;
-        _dgvRouteUpdate.ColumnHeadersDefaultCellStyle.Font = FontManager.FontDataGridView2;
-
-        _dgvRouteUpdate.ReadOnly = true;
-
-        //AddTextBoxColumn(_dgvRouteUpdate, "routeSet", "최적루트설정");
-        // 최적루트 update 버튼
-        AddButtonColumn(_dgvRouteUpdate, "btnRt1", "", "루트1", 60);
-        AddButtonColumn(_dgvRouteUpdate, "btnRt2", "", "루트2", 60);
-        AddButtonColumn(_dgvRouteUpdate, "btnRt3", "", "루트3", 60);
-
-        DataGridViewTextBoxColumn spaceColumn = new DataGridViewTextBoxColumn();
-        spaceColumn.Name = "space";
-        spaceColumn.HeaderText = "";
-        spaceColumn.ReadOnly = true;
-        //spaceColumn.DefaultCellStyle.BackColor = ColorTranslator.FromHtml("#343B41");
-        spaceColumn.SortMode = DataGridViewColumnSortMode.NotSortable;
-        _dgvRouteUpdate.Columns.Add(spaceColumn);
-
-        _dgvRouteUpdate.Columns["space"].AutoSizeMode = DataGridViewAutoSizeColumnMode.Fill;
-
-        // 열 너비 자동 조정 설정
-        _dgvRouteUpdate.AutoSizeColumnsMode = DataGridViewAutoSizeColumnsMode.AllCells;
-
-        // 행 추가
-        _dgvRouteUpdate.Rows.Add();
-        _dgvRouteUpdate.ClearSelection();
-
-        // 셀 스타일 설정
-        //foreach (DataGridViewRow row in _dgvRouteUpdate.Rows)
-        //{
-        //    //foreach (DataGridViewCell cell in row.Cells)
-        //    //{
-        //    //    cell.Style.BackColor = ColorTranslator.FromHtml("#343B41");
-        //    //    cell.Style.ForeColor = Color.White;
-        //    //}
-        //}
-        _dgvRouteUpdate.CellClick += new DataGridViewCellEventHandler(routeGridViewCellClick);
-    }
-
-
-    private void InitializedataGridViewRouteInfo()
-    {
-        _dgvRouteInfo = new DataGridView();
-        pan_routeInfo.Controls.Add(_dgvRouteInfo);
-        _dgvRouteInfo.Dock = DockStyle.Fill;
-        _dgvRouteInfo.Margin = new Padding(1);
-        _dgvRouteInfo.BorderStyle = BorderStyle.None;
-        _dgvRouteInfo.CellBorderStyle = DataGridViewCellBorderStyle.None;
-
-        _dgvRouteInfo.AllowUserToAddRows = false;
-        _dgvRouteInfo.SelectionMode = DataGridViewSelectionMode.CellSelect;
-        _dgvRouteInfo.RowHeadersVisible = false;
-        //_dgvRouteInfo.RowHeadersWidth = 53;
-        _dgvRouteInfo.RowHeadersWidthSizeMode = DataGridViewRowHeadersWidthSizeMode.DisableResizing;
-
-        _dgvRouteInfo.ColumnHeadersHeightSizeMode = DataGridViewColumnHeadersHeightSizeMode.DisableResizing;
-        _dgvRouteInfo.ColumnHeadersHeight = 22;
-        _dgvRouteInfo.RowTemplate.Height = 20;
-        _dgvRouteInfo.EnableHeadersVisualStyles = false;
-        _dgvRouteInfo.ReadOnly = true;
-
-        AddButtonColumn(_dgvRouteInfo, "RT_BTN", "루트", "확인", 50);
-        AddTextBoxColumn(_dgvRouteInfo, "RT_NO", "번호", 43);
-        AddTextBoxColumn(_dgvRouteInfo, "RT_START", "시단", 43);
-        AddTextBoxColumn(_dgvRouteInfo, "way1", "경유1", 43);
-        AddTextBoxColumn(_dgvRouteInfo, "way2", "경유2", 43);
-        AddTextBoxColumn(_dgvRouteInfo, "RT_END", "종단", 43);
-        AddTextBoxColumn(_dgvRouteInfo, "YARD_NM", "야드", 43);
-
-
-        //DataGridViewTextBoxColumn emptyColumn = new DataGridViewTextBoxColumn();
-        //emptyColumn.Name = "EmptyColumn";
-        //emptyColumn.HeaderText = "";
-        //emptyColumn.ReadOnly = true;
-        //emptyColumn.SortMode = DataGridViewColumnSortMode.NotSortable;
-        //dataGridViewDetails.Columns.Add(emptyColumn);
-
-        //dataGridViewDetails.Columns["EmptyColumn"].AutoSizeMode = DataGridViewAutoSizeColumnMode.Fill;
-
-        // 열 너비 자동 조정 설정
-        _dgvRouteInfo.AutoSizeColumnsMode = DataGridViewAutoSizeColumnsMode.AllCells;
-
-        // 행 추가
-        _dgvRouteInfo.Rows.Add();
-        _dgvRouteInfo.ClearSelection();
-
-        // 스타일 설정
-        Console.WriteLine("InitializedataGridViewDetails completed");
-        //ApplyDataGridViewStyles();
-
-        //dataGridViewDetails.SelectionChanged += new EventHandler(dataGridViewDetails_SelectionChanged);
-        //dataGridViewDetails.CellClick += new DataGridViewCellEventHandler(dataGridViewDetails_CellClick);
-
-
-    }
-
-    private void routeGridViewCellClick(object sender, DataGridViewCellEventArgs e)
-    {
-        try
-        {
-            if (e.RowIndex >= 0 && 
-                _dgvRouteUpdate.Columns[e.ColumnIndex].Name.Contains("btnRt"))
-            {
-                int rtSeq = e.ColumnIndex;
-                DataGridViewCell cell = _dgvRouteUpdate.Rows[e.RowIndex].Cells[e.ColumnIndex];
-                Hashtable param_ht = setUnityParamHt_SetCominRoute(rtSeq, cell);
-                if(param_ht != null)
-                {
-                    SendReqForUpdateComeInRoute(param_ht);
-                }
-            }
-        }
-        catch (Exception ex)
-        {
-            string mn = MethodBase.GetCurrentMethod().Name;
-            BerthExceptionHandler.HandleException(ex, mn);
-        }
-    }
-
-    private Hashtable setUnityParamHt_SetCominRoute(int rtSeq, DataGridViewCell cell)
-    {
-        SheetView holdSheet = Sheet_HoldInfo;
-        //string[] splits = lbl_holdBr.Text.Split('/');
-        string[] splits = cell.Value.ToString().Split('/');
-        string shhold = splits[0];
-        if (shhold == null ||
-            string.IsNullOrEmpty(shhold))
-        { return null; }
-        string mwcd = holdSheet.Cells[0, 0].Tag.ToString();
-        Hashtable param_ht = new Hashtable
-        {
-            {"unloadplan", 0},
-            { "mwcd", mwcd},
-            { "shhold", splits[0] },
-            { "rtseq", rtSeq },
-            { "uwseq", cell.Tag} // ulorder 키값 or -1(키값 null이면)
-        };
-        return param_ht;
-    }
-
-    private void AddTextBoxColumn(DataGridView dgv, string colName, string headerText, int width, bool visible = false)
-    {
-        DataGridViewTextBoxColumn column = new DataGridViewTextBoxColumn();
-        column.Name = colName;
-        column.HeaderText = headerText;
-        column.HeaderCell.Style.Alignment = DataGridViewContentAlignment.MiddleCenter;
-        column.DefaultCellStyle.Alignment = DataGridViewContentAlignment.MiddleCenter;
-        column.HeaderCell.Style.BackColor = BerthColorManager.SheetColumnHeaderBackColor;
-        column.HeaderCell.Style.ForeColor = BerthColorManager.SheetForeColor;
-        column.DefaultCellStyle.BackColor = BerthColorManager.SheetBodyDefaultBackColor;
-        column.DefaultCellStyle.ForeColor = BerthColorManager.SheetBodyDefaultForeColor;
-        column.SortMode = DataGridViewColumnSortMode.NotSortable;
-        column.MinimumWidth = width;
-        column.Width = width;
-        column.Visible = visible;
-        dgv.Columns.Add(column);
-    }
-
-    private void AddButtonColumn(DataGridView dgv, string name, string headerText, string buttonText, int width)
-    {
-        DataGridViewButtonColumn buttonColumn = new DataGridViewButtonColumn();
-        buttonColumn.Name = name;
-        buttonColumn.HeaderText = headerText;
-        buttonColumn.HeaderCell.Style.Alignment = DataGridViewContentAlignment.MiddleCenter;
-        buttonColumn.DefaultCellStyle.Alignment = DataGridViewContentAlignment.MiddleCenter;
-        buttonColumn.HeaderCell.Style.BackColor = BerthColorManager.SheetColumnHeaderBackColor;
-        buttonColumn.HeaderCell.Style.ForeColor = BerthColorManager.SheetForeColor;
-        buttonColumn.DefaultCellStyle.BackColor = BerthColorManager.SheetBodyDefaultBackColor;
-        buttonColumn.DefaultCellStyle.ForeColor = BerthColorManager.SheetBodyDefaultForeColor;
-        buttonColumn.FlatStyle = FlatStyle.Standard;
-        buttonColumn.SortMode = DataGridViewColumnSortMode.NotSortable;
-        buttonColumn.UseColumnTextForButtonValue = !string.IsNullOrEmpty(buttonText);
-        buttonColumn.Text = buttonText;
-        buttonColumn.MinimumWidth = width;
-        buttonColumn.Width = width;
-
-        dgv.Columns.Add(buttonColumn);
-    }
-#endregion dataGridView 관련
-```
-
+###### 내 id는 2004 선작현, 2006 하작계
+![[../noGitSync/선작현 dataGridView 관련 어쩌고]]
 
 ## Not done yet
 
