--- a/다울 2024-08-13.md
+++ b/다울 2024-08-13.md
@@ -14,11 +14,10 @@ Tomorrow: [[다울 2024-08-14]]
 
 
 ## 오늘 작업 목표
-- [ ] 하역계획 편성 시 시작일자 0 디폴트, 삭제 시 역시 마찬가지
-- [ ] 잠금 색상 변경
-- [ ] 최적루트 설정 기능 row 빼고 홀드시트에 루트 컬럼에 버튼셀타입으로 최적루트 설정 기능 추가.
-- [ ] 선석계획 마우스다운 로직 
-
+- [x] 하역계획 편성 시 시작일자 0 디폴트, 삭제 시 역시 마찬가지 ✅ 2024-08-13
+- [x] 잠금 색상 변경 ✅ 2024-08-13
+- [x] 최적루트 설정 기능 row 빼고 홀드시트에 루트 컬럼에 버튼셀타입으로 최적루트 설정 기능 추가. ✅ 2024-08-13
+- [x] 선석계획 마우스다운 로직 ✅ 2024-08-13
 
 
 ## 배운 것
