--- a/다울 2024-05-28.md
+++ b/다울 2024-05-28.md
@@ -17,7 +17,7 @@ Tomorrow: [[다울 2024-05-29]]
 
 확정 버튼 누르면 확정
 
-![[Pasted image 20240528082330.png]]
+![[../noGitSync/Images/Pasted image 20240528082330.png]]
 
 [[temp/선석계획 확정에 대해서|선석계획 확정에 대해서]]
 [[GTP에게 내 작업 설명하는 글]]
