--- a/다울 2024-06-14.md
+++ b/다울 2024-06-14.md
@@ -33,7 +33,7 @@ plan 조회해서 화면에 뿌리면 됨.
 
 
 종단은 
-![[Pasted image 20240612083822.png]]
+![[../noGitSync/Images/Pasted image 20240612083822.png]]
 
 ```SQL
 { SELECT UL_CD, UL_NM, UL_SEQ 
