--- a/다울 2024-07-23.md
+++ b/다울 2024-07-23.md
@@ -30,9 +30,9 @@ Tomorrow: [[다울 2024-07-24]]
 
 ## 정리가 필요한 메모는 아래에
 
-![[Pasted image 20240723172529.png]]
+![[../noGitSync/Images/Pasted image 20240723172529.png]]
 
-![[Pasted image 20240723172809.png]]
+![[../noGitSync/Images/Pasted image 20240723172809.png]]
 
 ## Not done yet
 
