--- a/다울 2024-07-30.md
+++ b/다울 2024-07-30.md
@@ -14,7 +14,7 @@ Tomorrow: [[다울 2024-07-31]]
 
 
 ## 오늘 작업 목표
-- [ ] 루트 확인 버튼컬럼
+- [x] 루트 확인 버튼컬럼 ✅ 2024-08-20
 - [x] 기존 화면 현황정보 이미지 올려놓고 가기. STAGE PAINT ✅ 2024-08-12
 - [x] 화면 ui 변경 ✅ 2024-08-12
 	- [x] 데이터 표시 ✅ 2024-08-12
