--- a/다울 2024-09-04.md
+++ b/다울 2024-09-04.md
@@ -16,14 +16,14 @@ Tomorrow: [[다울 2024-09-05]]
 ## 오늘 작업 목표
 - [x] 하작계 확정 undo, redo ✅ 2024-09-04
 - [ ] 하작계 날짜이동 후 체크박스 체크 여부가 입항예정목록 조회에 반영되도록
-- [ ] 최대화 버튼 이미지 변경
+- [x] 최대화 버튼 이미지 변경 ✅ 2024-09-10
 - [ ] DOCK ORDER에 하역작업팝업에서 편성하고 저장 시 
       DOCK ORDER에 바로 수정되게 하냐 
       아니면 DOCK ORDER의 DECISION을 0으로, UNLOAD ORDER의 DECISION을 0으로 바꾸고 
       DOCK PLAN, UNLOAD PLAN을 INSERT 하냐
       
 
-- [ ] 하역계획 AI 타임아웃 설정 COM SETUP에서 가져와서 변수로 적용하기.
+- [x] 하역계획 AI 타임아웃 설정 COM SETUP에서 가져와서 변수로 적용하기. ✅ 2024-09-10
 - [ ] 
 
 
