--- a/다울 2024-09-12.md
+++ b/다울 2024-09-12.md
@@ -6,7 +6,7 @@ tags: [다울일간노트]
 ---
 - [x] 나스 솔루션 link, source 백업하기 ✅ 2024-09-12
 Yesterday: [[다울 2024-09-11]]
-Tomorrow: [[다울 2024-09-13]]
+다다음주 목: [[다울 2024-09-19]]
 
 ### Wiseman says,
 Error generating daily quote
