--- a/다울 2024-06-12.md
+++ b/다울 2024-06-12.md
@@ -24,7 +24,7 @@ Tomorrow: [[다울 2024-06-13]]
 
 - [ ] drawLine할 때 조건 수정해야함
 - [ ] redLine이 그려질 때 조건 거꾸로는 안 가야하고
-- [ ] 슬라이스가 있으면 합치기도 만들어야함
+- [x] 슬라이스가 있으면 합치기도 만들어야함 ✅ 2024-09-23
 - [x] 클릭 상태 매니저 새로 만들기. 클릭 로직이 복잡해 너무. ✅ 2024-08-12
 
 
