--- a/다울 2024-10-17.md
+++ b/다울 2024-10-17.md
@@ -12,7 +12,7 @@ Tomorrow: [[다울 2024-10-18]]
 ## 오늘 작업 목표
 - [x] 선박출항 시 해당 선박의 선석정보 데이터가 지워지도록 ✅ 2024-10-17
 - [x] 입력,삭제버튼 엔터키로 ✅ 2024-10-17
-- [ ] 같은 선석으로 이안이 안되게
+- [x] 같은 선석으로 이안이 안되게 ✅ 2024-10-23
 
 
 ## Not done yet
