--- a/다울 2024-10-18.md
+++ b/다울 2024-10-18.md
@@ -6,15 +6,15 @@ tags: [다울일간노트]
 ---
 - [x] 나스 솔루션 link, source 백업하기 ✅ 2024-10-18
 Yesterday: [[다울 2024-10-17]]
-Tomorrow: [[다울 2024-10-19]]
+다음 주 월: [[다울 2024-10-21]]
 
 
 
 ## 오늘 작업 목표
-- [ ] dockplan 비교시트에서 체크박스에 따라 ai, worker 보여주기.
-- [ ] 비교시트에 ai worker 페어가 있으면 ai 수정 불가능하게
-	- [ ] 수정 시도 시 마우스 드래그 시작하면서 메시지박스
-	- [ ] 이안 막는 것과 동일한 방식으로
+- [x] dockplan 비교시트에서 체크박스에 따라 ai, worker 보여주기. ✅ 2024-10-22
+- [x] 비교시트에 ai worker 페어가 있으면 ai 수정 불가능하게 ✅ 2024-10-21
+	- [x] 수정 시도 시 마우스 드래그 시작하면서 메시지박스 ✅ 2024-10-21
+	- [x] 이안 막는 것과 동일한 방식으로 ✅ 2024-10-21
 
 
 
