--- a/다울 2024-12-19.md
+++ b/다울 2024-12-19.md
@@ -10,8 +10,7 @@ Tomorrow: [[다울 2024-12-20]]
 
 
 ## 오늘 작업 목표
-- [ ] 목요일 오후 마감. (금 김종광 이사님 연차)
-
+- [x] 목요일 오후 마감. (금 김종광 이사님 연차) ✅ 2024-12-19
 
 
 ## Not done yet
