--- a/다울 2024-07-10.md
+++ b/다울 2024-07-10.md
@@ -41,36 +41,9 @@ Tomorrow: [[다울 2024-07-11]]
 
 
 ## 배운 것
-fpSpread 스타일 관련
-#### Skin 프로퍼티
-```cs
-ulFs.Skin = DefaultSpreadSkins.Classic;
-```
-###### Classic
-평면적인 기본 디자인
-이걸로 전체적인 디자인을 flat하게 만들 수 있다.
-###### Shamrock
-알록달록?
-약간 초록색 느낌
+###### fpSpread 스타일 관련
+![[journals/temp/fpSpread 스타일 관련]]
 
-###### Metallic
-기본 ColumnHeader랑 거의 비슷
-단 하이라이트컬럼이 그레이톤의 메탈릭한 느낌임
-
-###### Sunburst
-노랑, 빨강.
-
-###### Grayscale
-메탈릭이랑 비슷한데 좀 더 어둡고 칙칙
-
-###### ArticSea
-파랑 톤에 좀 지저분
-
-###### Midnight
-메탈릭이랑 비슷하면서 좀 더 갈색느낌
-
-###### Newspaper
-기본 스타일인데 배경색이 연한베이지
 
 
 
