--- a/다울 2024-11-22.md
+++ b/다울 2024-11-22.md
@@ -12,8 +12,8 @@ Tomorrow: [[다울 2024-11-23]]
 
 ## 오늘 작업 목표
 - [x] svn Link, Source 폴더 백업 배치파일 작성 ✅ 2024-11-22
-- [ ] 하역작업계획 Source백업 해놓고 화면 개편 준비
-- [ ] AI 요청 목록 한번에 추가하는 기능
+- [x] 하역작업계획 Source백업 해놓고 화면 개편 준비 ✅ 2025-01-21
+- [x] AI 요청 목록 한번에 추가하는 기능 ✅ 2025-01-21
 - [x] AI 요청 목록 BACKCOLOR변경 로직 변경. 같은선박 항차수 다를 때도 색 변경되도록 ✅ 2024-11-25
 - [x] AI 요청목록 COUNT 기능 추가 ✅ 2024-11-25
 
