--- a/다울 2024-12-17.md
+++ b/다울 2024-12-17.md
@@ -10,13 +10,12 @@ Tomorrow: [[다울 2024-12-18]]
 
 
 ## 오늘 작업 목표
-- [ ] 시점 저장 기능 넣기.
 - [x] 덕트 온오프 토글 기능 ✅ 2024-12-18
 - [x] 팝업 상태관리 ✅ 2024-12-17
 - [x] 디비는 안 하는 걸로. ✅ 2024-12-17
       영업을 하든 동영상을 찍든. 실제 개발이 아니니까 db는 필요없음. 
       db를 쓰면 보여줄 때 세팅을 해야해서 더 번거롭다. 
-- [ ] 물류트래킹 센서 설치에서 토의.
+- [x] 물류트래킹 센서 설치에서 토의. ✅ 2025-01-21
 - [x] 온도에 따라 상태값 변경. ✅ 2024-12-17
 - [x] 온도 랜덤 변경. ✅ 2024-12-17
 - [x] 오브젝트 타겟 포지션 변경 시점. ✅ 2024-12-18
