--- a/다울 2024-12-24.md
+++ b/다울 2024-12-24.md
@@ -11,7 +11,7 @@ Yesterday: [[다울 2024-12-23]]
 
 ## 오늘 작업 목표
 - [x] 공장같은 바닥 적용 ✅ 2024-12-24
-- [ ] 샘플 상세보기 UI 구현
+- [x] 샘플 상세보기 UI 구현 ✅ 2025-01-21
 
 
 
