--- a/다울 2025-02-04.md
+++ b/다울 2025-02-04.md
@@ -26,8 +26,8 @@ LVI-SLAM을 설명하는 ppt 추가.
 
 
 ## 오늘 작업 목표
-- [ ] 연구제안서 작성 플로우차트
-- [ ] 연구제안서 작성 내용추가. 
+- [x] 연구제안서 작성 플로우차트 ✅ 2025-02-14
+- [x] 연구제안서 작성 내용추가. ✅ 2025-02-14
 
 [[../noGitSync/3차 제안서 제작중|3차 제안서 제작중]]
 
