--- a/다울 2025-02-05.md
+++ b/다울 2025-02-05.md
@@ -4,7 +4,7 @@ created: 2025-02-05 08:13
 aliases: 
 tags: [다울일간노트]
 ---
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2025-02-14
 
 Yesterday: [[다울 2025-02-04]] 
 Tomorrow: [[다울 2025-02-06]] 
