--- a/다울 2024-02-27.md
+++ b/다울 2024-02-27.md
@@ -20,7 +20,7 @@ tags: [journal]
 
 
 ###### visual studio 단축키
-![[temp/vs 단축키]]
+![[temp/visual studio 단축키]]
 
 ###### 메시지 박스버튼 YesNoCancel
 ![[temp/메시지 박스버튼 YesNoCancel]]
