--- a/다울 2024-02-28.md
+++ b/다울 2024-02-28.md
@@ -62,7 +62,7 @@ sql로 distinct 키워드를 사용해서 항목 목록을 가져오기
 정규식 생성 사이트
 https://regex-generator.olafneumann.org/?sampleText=&flags=i
 
-[[temp/vs 단축키|vs 단축키]]
+[[temp/visual studio 단축키|visual studio 단축키]]
 
 ###### 이메일 콤보박스 인덱스 변하면 텍스트박스에 변화
 ![[temp/이메일 콤보박스 인덱스 변하면 텍스트박스에 변화]]
