--- a/다울 2024-03-06.md
+++ b/다울 2024-03-06.md
@@ -18,7 +18,7 @@ up선석작업현황.cs
 up선석배정계획.cs
 3104 line
 
-[[temp/vs 단축키]]
+[[temp/visual studio 단축키]]
 alt shift = : extend selection area
 alt shift - : shrink selection area
 
