--- a/다울 2024-03-26.md
+++ b/다울 2024-03-26.md
@@ -11,7 +11,7 @@ tags:
 
 [[temp/김선민 사원의 소스코드 설명|김선민 사원의 소스코드 설명]]
 
-[[temp/vs 단축키|vs 단축키]]
+[[temp/visual studio 단축키|visual studio 단축키]]
 ctrl R ctrl M : 리펙토링, 메서드 추출
 
 ### 하역기 정보 표시
