--- a/다울 2024-03-27.md
+++ b/다울 2024-03-27.md
@@ -20,7 +20,7 @@ dock plan2 테이블에서 다 갖고와서 테이블에 보여주면 된다.
 
 
 
-[[temp/vs 단축키|vs 단축키]]
+[[temp/visual studio 단축키|visual studio 단축키]]
 ctrl k j : 모두 expand
 ctrl m o : 모두 collapse
 
