--- a/다울 2024-05-10.md
+++ b/다울 2024-05-10.md
@@ -9,7 +9,7 @@ Yesterday: [[다울 2024-05-09]]
 
 ## 오늘 작업 목표
 
-[[temp/vs 단축키|vs 단축키]]
+[[temp/visual studio 단축키|visual studio 단축키]]
 
 ## 배운 것
 ###### EditChange 와 CellChanged 비교
