--- a/다울 2024-05-17.md
+++ b/다울 2024-05-17.md
@@ -10,161 +10,20 @@ Yesterday: [[다울 2024-05-16]]
 ## 오늘 작업 목표
 
 
-### Comparing fpSpread's selectionChanged and selectionChanging Events
-
-#### selectionChanged 이벤트
-선택이 변경된 후에 발생합니다. 셀이나 셀 범위가 변경된 이후에 실행됩니다. 선택이 완료된 상태에서 수행할 작업에 적합합니다.
-
-- **발생 시점**: 선택이 변경된 후
-- **주 용도**: 선택된 데이터 처리, UI 업데이트, 데이터 저장
-
-#### selectionChanging 이벤트
-선택이 변경되기 전에 발생합니다. 셀이나 셀 범위가 변경되기 전에 실행됩니다. 선택을 막거나 사용자 확인을 요구하는 작업에 적합합니다.
-
-- **발생 시점**: 선택이 변경되기 전
-- **주 용도**: 선택 변경 방지, 사용자 확인, 유효성 검사
-
-### 주요 차이점
-
-1. **발생 시점**:
-   - `selectionChanged`: 선택 변경 후
-   - `selectionChanging`: 선택 변경 전
-
-2. **용도**:
-   - `selectionChanged`: 선택된 데이터 후처리
-   - `selectionChanging`: 선택 변경 전처리 및 유효성 검사
-
-3. **유효성 검사**:
-   - `selectionChanging`에서 선택 변경을 막을 수 있음
-
-### Q1:
-fpSpread에서 selectionChanging 이벤트를 사용하여 특정 셀 범위로의 선택을 막는 방법은 무엇인가요?
-
-### Q2:
-selectionChanged 이벤트를 사용하여 선택된 셀의 데이터를 실시간으로 업데이트하는 방법은 무엇인가요?
-
-#### Summary
-1. selectionChanged 이벤트는 선택 후 발생
-2. selectionChanging 이벤트는 선택 전 발생
-3. selectionChanged는 후처리에 적합
-4. selectionChanging는 전처리에 적합
-5. selectionChanging로 선택 변경을 막을 수 있음
+###### selectionChanged 와 selectionChanging - in fpSpread event
+![[journals/temp/selectionChanged 와 selectionChanging - in fpSpread event]]
 
 
 
-### Comparing CellClick and SelectionChanged Events in fpSpread
 
-#### CellClick 이벤트
-사용자가 특정 셀을 클릭할 때 발생합니다. 클릭된 셀에 대한 정보를 제공하며, 주로 사용자 입력이나 상호작용을 처리하는 데 사용됩니다.
-
-- **발생 시점**: 셀을 클릭할 때
-- **주 용도**: 클릭된 셀의 데이터 처리, 사용자 인터페이스 반응, 특정 셀 클릭에 대한 로직 실행
-
-#### SelectionChanged 이벤트
-선택이 변경된 후에 발생합니다. 여러 셀 또는 셀 범위의 선택이 완료된 상태에서 발생합니다. 셀 선택 변경에 따라 후처리를 해야 하는 경우 사용됩니다.
-
-- **발생 시점**: 선택이 변경된 후
-- **주 용도**: 선택된 셀의 데이터 처리, UI 업데이트, 선택된 범위에 대한 작업 실행
-
-### 주요 차이점
-
-1. **발생 시점**:
-   - `CellClick`: 셀 클릭 시 발생
-   - `SelectionChanged`: 선택 변경 후 발생
-
-2. **용도**:
-   - `CellClick`: 특정 셀 클릭에 반응, 단일 셀 작업
-   - `SelectionChanged`: 선택 범위 변경 후 작업, 다중 셀 또는 범위 작업
-
-3. **적용 범위**:
-   - `CellClick`: 단일 셀
-   - `SelectionChanged`: 여러 셀 또는 셀 범위
-
-### Q1:
-CellClick 이벤트를 사용하여 특정 셀을 클릭했을 때 해당 셀의 데이터를 어떻게 가져올 수 있나요?
-
-### Q2:
-SelectionChanged 이벤트를 사용하여 선택된 셀 범위의 데이터를 어떻게 실시간으로 업데이트할 수 있나요?
-
-#### Summary
-1. CellClick 이벤트는 셀 클릭 시 발생
-2. SelectionChanged 이벤트는 선택 변경 후 발생
-3. CellClick은 단일 셀 작업에 적합
-4. SelectionChanged는 다중 셀 또는 범위 작업에 적합
-5. CellClick은 사용자의 특정 셀 클릭에 반응
-6. SelectionChanged는 선택된 셀 범위의 데이터 처리를 위해 사용
-7. 두 이벤트 모두 사용자 상호작용에 따라 UI를 업데이트하는 데 사용됨
+###### CellClick 와 SelectionChanged 비교 - in fpSpread event
+![[journals/temp/CellClick 와 SelectionChanged 비교 - in fpSpread event]]
 
 
 
-### Event Sequence in fpSpread: CellClick, SelectionChanging, and SelectionChanged
+###### 이벤트 발생 순서, fpSpread 셀클릭, SelectionChanging, SelectionChanged - in FpSpread
+![[journals/temp/이벤트 발생 순서, fpSpread 셀클릭, SelectionChanging, SelectionChanged - in FpSpread]]
 
-#### 1. CellClick 이벤트
-사용자가 특정 셀을 클릭하면 이 이벤트가 발생합니다. 이 이벤트에서 특정 범위를 선택하도록 설정할 수 있습니다.
-
-#### 2. SelectionChanging 이벤트
-셀 선택이 변경되기 전에 이 이벤트가 발생합니다. 이 이벤트에서는 선택이 변경될 때의 유효성 검사를 수행하거나 선택 변경을 막을 수 있습니다.
-
-#### 3. SelectionChanged 이벤트
-셀 선택이 변경된 후에 이 이벤트가 발생합니다. 최종 선택된 셀 범위에 대한 후처리를 수행합니다.
-
-### 이벤트 발생 순서
-
-1. **CellClick 이벤트**:
-   - 사용자가 셀을 클릭합니다.
-   - 이 이벤트 핸들러에서 특정 범위를 선택하도록 코드를 작성합니다.
-   - 선택 변경이 발생하면 `SelectionChanging` 이벤트가 자동으로 호출됩니다.
-
-2. **SelectionChanging 이벤트**:
-   - 선택이 변경되기 전에 호출됩니다.
-   - 이 이벤트 핸들러에서 유효성 검사나 선택 변경을 취소하는 로직을 작성할 수 있습니다.
-   - 선택이 유효한 경우, 선택 변경이 진행됩니다.
-
-3. **SelectionChanged 이벤트**:
-   - 선택 변경이 완료된 후에 호출됩니다.
-   - 최종 선택된 범위에 대한 후처리를 수행합니다.
-
-### 코드 예시
-
-다음은 CellClick 이벤트에서 특정 범위를 선택하고, SelectionChanging 및 SelectionChanged 이벤트가 순차적으로 발생하는 예시입니다.
-
-```csharp
-// CellClick 이벤트 핸들러
-void fpSpread_CellClick(object sender, CellClickEventArgs e)
-{
-    // 특정 셀 범위를 선택하도록 설정
-    fpSpread.Sheets[0].SetSelection(e.Row, e.Column, 3, 3);
-}
-
-// SelectionChanging 이벤트 핸들러
-void fpSpread_SelectionChanging(object sender, SelectionChangingEventArgs e)
-{
-    // 유효성 검사 또는 선택 변경 방지 로직
-    // e.Cancel = true; // 선택 변경을 취소하려면 이 줄의 주석을 제거하세요.
-}
-
-// SelectionChanged 이벤트 핸들러
-void fpSpread_SelectionChanged(object sender, SelectionChangedEventArgs e)
-{
-    // 최종 선택된 셀 범위에 대한 후처리
-    MessageBox.Show("Selection Changed!");
-}
-```
-
-### Q1:
-CellClick 이벤트를 사용하여 특정 범위를 선택할 때 유효성 검사를 추가하려면 어떻게 해야 하나요?
-
-### Q2:
-SelectionChanging 이벤트에서 선택 변경을 취소해야 하는 경우, 어떤 조건을 체크할 수 있나요?
-
-#### Summary
-1. CellClick 이벤트는 사용자가 셀을 클릭할 때 발생
-2. CellClick에서 특정 셀 범위를 선택하도록 설정 가능
-3. SelectionChanging 이벤트는 선택 변경 전에 발생
-4. SelectionChanging 이벤트에서 유효성 검사 가능
-5. SelectionChanged 이벤트는 선택 변경 후에 발생
-6. 선택 변경이 순차적으로 발생하며 각 이벤트가 호출됨
-7. 이벤트 핸들러에서 각각의 작업을 처리하도록 설정 가능
 
 
 ### cellClick 이벤트에서 Sheet의 ActiveRowIndex
