--- a/다울 2024-07-25.md
+++ b/다울 2024-07-25.md
@@ -17,9 +17,8 @@ Tomorrow: [[다울 2024-07-26]]
 
 
 
-
 ## 배운 것
-
+[[svn]]
 ###### TortoiseSVN Cleanup 오류 메시지
 ![[journals/temp/TortoiseSVN Cleanup 오류 메시지]]
 
