--- a/다울 2025-03-26.md
+++ b/다울 2025-03-26.md
@@ -44,4 +44,4 @@ dv.taskList(dv.pages('-"3. Resource/Templates"').file.tasks
 
 ## 정리가 필요한 메모는 아래에
 
-[[다울 회의 2025-03-26 최규동 상무님 화면 리뷰 내용]]
+[[../noGitSync/다울 회의 2025-03-26 최규동 상무님 화면 리뷰 내용]]
