--- a/다울 2025-04-24.md
+++ b/다울 2025-04-24.md
@@ -10,26 +10,17 @@ Tomorrow: [[다울 2025-04-25]]
 
 [[temp/브랜드별 선호 선석|브랜드별 선호 선석]]
 ## 오늘 작업 목표
-- [ ] GS인증 관련 사항 정리
-	- [ ] 5월 중순. 그때까지 화면 로직 픽스.
-		- [ ] 변경사항을 어디까지 적용해서 인증 받을지 결정
-		- [ ] 그걸 위해 필요한 내용
-			- [ ] 브랜드별 선석 하역 효율
-				- [ ] 관련 데이터 정리되어서 나오면 작업 시작
-
-			- [ ] gs인증 타스크도 선석별 고정 하역기에 맞춰서  하역계획을 넣도록 수정
-	- [ ] 메뉴얼 내용 수정
-	- [ ] 플래그 넣어서 GS인증모드일 때 로직 관리.
-	- [ ] 플래그 키면 인증받을 내용 외에는 감추도록
-- [ ] 선석, 하역기 변경사항 관련 화면 변경할 점
+- [x] GS인증 관련 사항 정리 ✅ 2025-05-29
+	- [x] 5월 중순. 그때까지 화면 로직 픽스. ✅ 2025-05-29
+		- [x] 변경사항을 어디까지 적용해서 인증 받을지 결정 ✅ 2025-05-29
+	- [x] 메뉴얼 내용 수정 ✅ 2025-06-02
+	- [x] 플래그 넣어서 GS인증모드일 때 로직 관리. ✅ 2025-05-29
+	- [x] 플래그 키면 인증받을 내용 외에는 감추도록 ✅ 2025-05-29
 	- [x] 선석별로 사용하는 고정 하역기들 ✅ 2025-04-23
 	- [x] 계획표에 반영. 하여기 RowCount 변경에 맞춰서 선석 RowHeight를 가변적으로 설정되도록 함 ✅ 2025-04-23
-	- [ ] 기존 계약하역률을 사용해서 작업길이 구하는 로직 변경
-		- [x] 브랜드에 대한 선석별 하역능력 테이블 추가 ✅ 2025-04-23
-		- [ ] 브랜드에 대한 선석별 하역능력 참고해서 선박의 작업시간 결정되도록.
-			- [ ] 선박 클릭하면
+	- [x] 브랜드에 대한 선석별 하역능력 테이블 추가 ✅ 2025-04-23
 
-
+	- [x] gs인증 타스크도 선석별 고정 하역기에 맞춰서  하역계획을 넣도록 수정 ✅ 2025-06-05
 [[temp/하역기 상태 색상 관련|하역기 상태 색상 관련]]
 
 8자리
@@ -98,4 +89,6 @@ No1-1. plate feeding roller & chain conveyor machine system
 belt table
 길이
 belt count가 있을려나? 
+
+
 
