--- a/다울 2025-04-28.md
+++ b/다울 2025-04-28.md
@@ -11,10 +11,10 @@ Tomorrow: [[다울 2025-04-29]]
 
 
 ## 오늘 작업 목표
-- [ ] 유니티 대단중 후판 용접 프로젝트 d-13.
-	- [ ] 내 담당은 패널 UI
-		- [ ] 로직 고민
-		- [ ] 데이터 어떻게 관리.
+- [x] 유니티 대단중 후판 용접 프로젝트 d-13. ✅ 2025-06-02
+	- [x] 내 담당은 패널 UI ✅ 2025-06-02
+		- [x] 로직 고민 ✅ 2025-06-02
+		- [x] 데이터 어떻게 관리. ✅ 2025-06-02
 
 
 ## Not done yet
