--- a/다울 2025-06-05.md
+++ b/다울 2025-06-05.md
@@ -24,8 +24,8 @@ Yesterday: [[다울 2025-06-04]]
 	- [x] 메시지박스 ✅ 2025-06-05
 	- [x] 알림메시지 ✅ 2025-06-05
 - [x] 선석, 하역기 변경사항 관련 화면 변경할 점 ✅ 2025-06-11
-- [ ] 기존 계약하역률을 사용해서 작업길이 구하는 로직 변경
-	- [ ] 브랜드에 대한 선석별 하역능력 참고해서 선박의 작업시간 결정되도록.
+- [x] 기존 계약하역률을 사용해서 작업길이 구하는 로직 변경 ✅ 2025-07-10
+	- [x] 브랜드에 대한 선석별 하역능력 참고해서 선박의 작업시간 결정되도록. ✅ 2025-07-10
 
 
 ## Not done yet
