--- a/다울 2025-06-13.md
+++ b/다울 2025-06-13.md
@@ -13,7 +13,7 @@ Yesterday: [[다울 2025-06-12]]
 
 
 ## 오늘 작업 목표
-- [ ] 화상회의 결과 db 변경 필요.
+- [x] 화상회의 결과 db 변경 필요. ✅ 2025-07-10
 - [x] gs인증 문서 완료 ✅ 2025-06-18
 	- [x] 사취설 ✅ 2025-06-13
 	- [x] 제품설 ✅ 2025-06-18
