--- a/다울 2025-06-19.md
+++ b/다울 2025-06-19.md
@@ -17,7 +17,7 @@ Tomorrow: [[다울 2025-06-20]]
 ## 오늘 작업 목표
 입항예정정보 테이블에 
 컬럼 22개 추가
-- [ ] db설계서 문서 작성. 
+- [x] db설계서 문서 작성. ✅ 2025-07-09
 	- [x] 입항예정정보 ✅ 2025-06-19
 		- [x] 아이템 코드01~10 ✅ 2025-06-19
 		- [x] 아이템 선적량01~10 ✅ 2025-06-19
