파이썬 numpy 학습 시작

--- a/다울 2025-07-18.md
+++ b/다울 2025-07-18.md
@@ -14,8 +14,8 @@ Yesterday: [[다울 2025-07-17]]
 ## 오늘 작업 목표
 - [x] 솔루션 배포 관련 MyComUpdate.cs 수정 및 테스트 ✅ 2025-07-18
 	- [x] DirectoryCleaner 클래스로 내부 디렉토리에 포함된 파일만 삭제하는 로직으로 수정 ✅ 2025-07-18
-- [ ] 유니티 ui 포맷  📅 2025-07-24
-
+- [x] 유니티 ui 포맷  📅 2025-07-24
+	 ✅ 2025-07-28
 - [ ] ai 개발 파이썬.
 	- [ ] 사이킷런
 	- [ ] 파이토치
