--- a/다울 2025-07-24.md
+++ b/다울 2025-07-24.md
@@ -15,7 +15,7 @@ Tomorrow: [[다울 2025-07-25]]
 ## 오늘 작업 목표
 - [ ] 최규동 상무님 계획표 메일 발송
 - [x] 유니티 가상 스크롤 구현 슬라브 목록, 작업목록, 알림 조회 목록 ✅ 2025-07-24
-- [ ] 금요일 주간 업무일지 작성
+- [x] 금요일 주간 업무일지 작성 ✅ 2025-07-28
 
 
 주피터 노트북, NumPy, Pandas 사용법
@@ -48,5 +48,5 @@ dv.taskList(dv.pages('-"3. Resource/Templates"').file.tasks
 
 - [ ] 강의노트
  ###### 강의 파이썬 머신러닝 완벽 가이드
-![[studyNote/강의 파이썬 머신러닝 완벽 가이드]]
+![[studyNote/강의노트 파이썬 머신러닝 완벽 가이드]]
 
