--- a/다울 2025-07-17.md
+++ b/다울 2025-07-17.md
@@ -24,11 +24,11 @@ Tomorrow: [[다울 2025-07-18]]
 			- [x] mycomupdate, mycomdeployee, ✅ 2025-07-17
 			- [x] 업데이트가 기존 로직. 배포가 새 로직 ✅ 2025-07-17
 				- [x] 배포로 만들면 연월일시분초에서 초가 99로 만들어짐 ✅ 2025-07-17
-				- [ ] 배포 버튼 클릭해서 배포 만들면 c:/dw_sdms 경로의 ftp_test_trash.txt가 지워지는지 확인 > 안사라짐
+				- [x] 배포 버튼 클릭해서 배포 만들면 c:/dw_sdms 경로의 ftp_test_trash.txt가 지워지는지 확인 > 안사라짐 ✅ 2025-07-29
 	- [x] 서버pc ✅ 2025-07-17
 		- [x] ssl 서버 키 설치 ✅ 2025-07-17
-			- [ ] 만약 그냥 복붙해서 안되면 키 재생성
-				- [ ] openssl 설치
+			- [x] 만약 그냥 복붙해서 안되면 키 재생성 ✅ 2025-07-29
+				- [x] openssl 설치 ✅ 2025-07-29
 		- [x] my.ini 파일 수정 ✅ 2025-07-17
 		- [x] 서버에 heidsql 설치했다면 세션 관리자에서 접속했던 세션을 삭제. ✅ 2025-07-17
 	- [x] 사용자pc, 데이터발생pc ✅ 2025-07-17
