--- a/다울 2025-07-22.md
+++ b/다울 2025-07-22.md
@@ -18,9 +18,9 @@ Tomorrow: [[다울 2025-07-23]]
 		- [ ] 토글 버튼으로 다른 패널 켜고 끄기
 	- [ ] 알람 패널
 	- [ ] 스마트용접라인 (패널 우측 사이드 패널)
-		- [ ] 실적 요약
-		- [ ] 슬라브 정보 입력
-		- [ ] 작업지시 정보 입력
+		- [x] 실적 요약 ✅ 2025-07-29
+		- [x] 슬라브 정보 입력 ✅ 2025-07-29
+		- [x] 작업지시 정보 입력 ✅ 2025-07-29
 	- [ ] 시뮬레이션 (하단 패널)
 		- [ ] 시뮬레이션 결과
 			- [ ] 페이지네이션
