--- a/다울 2025-07-25.md
+++ b/다울 2025-07-25.md
@@ -11,7 +11,7 @@ Yesterday: [[다울 2025-07-24]]
 
 
 ## 오늘 작업 목표
-- [ ] 일일 업무일지 작성
+- [x] 일일 업무일지 작성 ✅ 2025-07-29
 	- [x] 일일업무일지 ✅ 2025-07-25
 	- [ ] 휴가계획 작성
 - [x] 주간 업무일지 작성 ✅ 2025-07-25
