--- a/studyNote/강의노트 파이썬 머신러닝 완벽 가이드.md
+++ b/studyNote/강의노트 파이썬 머신러닝 완벽 가이드.md
@@ -6,7 +6,7 @@ tags:
 ---
 ## 섹션 1. 강의 소개
 
-##섹션 2. 머신러닝 개념
+## 섹션 2. 머신러닝 개념
 ### 머신러닝 필요성 
 특징들을 if else 조건으로 구분하기 어렵다. 너무 많이 필요.
 
@@ -831,4 +831,1459 @@ print('일반 인덱스로 필터링 결과 :',array4)
 true인 위치 인덱스만 찾아서 값을 준다.
 
 ![[attaches/Pasted image 20250728165454.png]]
+
+
+
+### ndarray의 sork와 argsort
+
+배열의 정렬
+sort
+#### np.sort(ndarray) 
+인자로 들어온 원 행렬은 그대로 유지. 원 행렬의 정렬된 행렬을 return
+c#의 linq랑 비슷하네. 원본 그대로 놔두니까.
+
+#### ndarray.sort()
+원 행렬 자체를 정렬한 형태로 변환. 
+
+
+```python
+org_array = np.array([ 3, 1, 9, 5]) 
+print('원본 배열:', org_array)
+# np.sort( )로 정렬 
+sort_array1 = np.sort(org_array)         
+print ('np.sort( ) 호출 후 반환된 정렬 배열:', sort_array1) 
+print('np.sort( ) 호출 후 원본 배열:', org_array)
+# ndarray.sort( )로 정렬
+sort_array2 = org_array.sort()
+print('org_array.sort( ) 호출 후 반환된 배열:', sort_array2)
+print('org_array.sort( ) 호출 후 원본 배열:', org_array)
+
+-----------------
+원본 배열: [3 1 9 5]
+np.sort( ) 호출 후 반환된 정렬 배열: [1 3 5 9]
+np.sort( ) 호출 후 원본 배열: [3 1 9 5]
+org_array.sort( ) 호출 후 반환된 배열: None
+org_array.sort( ) 호출 후 원본 배열: [1 3 5 9]
+
+```
+
+
+`org_array.sort()`
+이거 쓸 때 주의. 다른 변수 만들어서 할당하지 마라.
+어차피 반환값이 없고 원본을 정렬된 형태로 변환하기 때문에 좋지 않은 방식
+
+
+
+기본적으로 오름차순 정렬.
+내림차순 정렬은 
+```
+[ :: -1 ]
+```
+
+
+```python
+sort_array1_desc = np.sort(org_array)[::-1]
+print ('내림차순으로 정렬:', sort_array1_desc) 
+
+----------
+내림차순으로 정렬: [9 5 3 1]
+```
+
+
+
+#### 2차원 배열에서 sort()
+axis 기반의 sort()
+np.sort(A, axis=0)
+
+![[attaches/Pasted image 20250729092845.png]]
+
+
+```python
+array2d = np.array([[8, 12], 
+                   [7, 1 ]])
+
+sort_array2d_axis0 = np.sort(array2d, axis=0)
+print('로우 방향으로 정렬:\n', sort_array2d_axis0)
+
+sort_array2d_axis1 = np.sort(array2d, axis=1)
+print('컬럼 방향으로 정렬:\n', sort_array2d_axis1)
+
+-------------
+로우 방향으로 정렬:
+ [[ 7  1]
+ [ 8 12]]
+컬럼 방향으로 정렬:
+ [[ 8 12]
+ [ 1  7]]
+
+```
+
+
+
+
+#### argsort()
+argument는 인자
+
+np.argsort()
+원본 행렬 정렬 시 행렬의 원래 인덱스가 필요할 때 사용.
+
+
+
+
+```python
+org_array = np.array([ 3, 1, 9, 5]) 
+sort_indices = np.argsort(org_array)
+print(type(sort_indices))
+print('행렬 정렬 시 원본 배열의 인덱스:', sort_indices)
+```
+
+```console
+<class 'numpy.ndarray'>
+행렬 정렬 시 원본 배열의 인덱스: [1 0 3 2]
+```
+
+
+반환값이 원본과 전혀 관계없어보임.
+
+
+```python
+org_array = np.array([ 3, 1, 9, 5]) 
+sort_indices_desc = np.argsort(org_array)[::-1]
+print('행렬 내림차순 정렬 시 원본 배열의 인덱스:', sort_indices_desc)
+```
+
+```console
+행렬 내림차순 정렬 시 원본 배열의 인덱스: [2 3 0 1]
+```
+
+
+
+key, value 맵핑이 안 돼.
+묵시적으로 맵핑을 하는 로직을 사용할 때 argsort()가 유용하게 사용된다.
+
+주로 언제 사용하는지.
+두 ndarray를 암묵적으로 맵핑해.
+
+name_array
+score_array
+
+성적을 오름차순 정렬하고 스코어순으로 사람 이름 출력하기
+이럴 때 np.argsort() 사용.
+sort_indices_asc 나온 걸로 이름을 순서대로 출력함.
+
+```python
+import numpy as np
+
+name_array = np.array(['John', 'Mike', 'Sarah', 'Kate', 'Samuel'])
+score_array= np.array([78, 95, 84, 98, 88])
+
+sort_indices_asc = np.argsort(score_array)
+print('성적 오름차순 정렬 시 score_array의 인덱스:', sort_indices_asc)
+print('성적 오름차순으로 name_array의 이름 출력:', name_array[sort_indices_asc])
+```
+
+```console
+성적 오름차순 정렬 시 score_array의 인덱스: [0 2 4 1 3]
+성적 오름차순으로 name_array의 이름 출력: ['John' 'Sarah' 'Samuel' 'Mike' 'Kate']
+```
+
+이름을 0 2 4 1 3 순으로 출력했더니 성적 오름차순으로 이름 출력한 것.
+
+
+
+### 선형대수 연산 - 행렬 내적, 전치행렬
+
+#### np.dot(A, B)
+
+행렬내적
+
+![[attaches/Pasted image 20250729101616.png]]
+
+```python
+A = np.array([[1, 2, 3],
+              [4, 5, 6]])
+B = np.array([[7, 8],
+              [9, 10],
+              [11, 12]])
+
+dot_product = np.dot(A, B)
+print('행렬 내적 결과:\n', dot_product)
+```
+
+```console
+행렬 내적 결과:
+ [[ 58  64]
+ [139 154]]
+```
+
+
+
+#### np.transpose(A)
+
+전치행렬
+
+위치를 바꿔.
+
+transpose -> T
+
+행 렬 위치 인덱스를 바꿔.
+
+정방행렬일 때
+
+
+행과 열이 pivoting 되는 효과가 있다.
+
+shape(2, 2)는 그대로 2,2
+
+shape(3,2)는 shape(2,3)
+
+![[attaches/Pasted image 20250729101809.png]]
+
+
+```python
+A = np.array([[1, 2],
+              [3, 4]])
+transpose_mat = np.transpose(A)
+print('A의 전치 행렬:\n', transpose_mat)
+```
+
+```console
+A의 전치 행렬:
+ [[1 3]
+ [2 4]]
+```
+
+
+### numpy 최종정리
+
+파이썬 머신러닝 구성하는 핵심 기반
+반드시 이해 필요.
+그러나 범위가 넒음
+핵심 개념 위주로 숙지하는 것이 좋다.
+
+넘파이는 선형대수 기반. 선형대수 연산을 함수로 쉽게 구현한 것
+
+데이터 처리 목적으로 친절하지 않음.
+
+2차원 데이터라면 데이터 가공을 위해 넘파이보다 판다스를 이용하는 것이 효율적이다.
+
+
+### 판다스
+#### 판다스 소개
+파이썬에서 데이터 처리 인기 라이브러리
+데이터 세트 대부분 2차원 데이터
+행x열
+
+인간이 이해하기 쉬운 구조. 
+
+데이터 분석을 위한 파이썬 책도 씀.
+
+![[attaches/Pasted image 20250729103334.png]]
+
+금융회사 출신
+프로그래머도 아닌데
+너무 잘 만들어서 생태계에서 광범위하게 사용함.
+
+금융데이터 특성상 시계열성 데이터가 많아.
+api 하나만 불러서 시계열성 데이터,
+집계성
+시각화와 효율적인 연계
+
+성능도 빨라.
+numpy에 기반함
+
+#### 판다스 주요 구성요소
+
+![[attaches/Pasted image 20250729103433.png]]
+
+##### DataFrame
+
+colum x row 로 구성된 2차원 데이터셋
+
+##### Series
+1개 column 값으로만 구성된 1차원
+
+둘의 차이점.
+Shape(3, ) 이면 series
+Shape(3, 1) 이면 dataframe
+
+##### Index
+dataframe/series의 고유한 key값 객체 
+dbms의 pk에 해당
+
+#### 기본 API
+##### read_csv()
+
+read_csv()를 이용하여 csv파일을 편리하게 DataFrame으로 로딩합니다.
+read_csv()의 sep인자를 콤마(,)가 아닌 다른 분리자로 변경하여 다른 유형의 파일도 로드가 가능합니다.
+
+```python
+titanic_df = pd.read_csv('titanic_train.csv')
+print('titanic 변수 type:',type(titanic_df))
+```
+
+```console
+titanic 변수 type: <class 'pandas.core.frame.DataFrame'>
+```
+
+read_csv("file_name", "")
+##### head()
+
+**head()와 tail()**
+head()는 DataFrame의 맨 앞부터 일부 데이터만 추출합니다. 
+tail()은 DataFrame의 맨 뒤부터 일부 데이터만 추출합니다.
+
+arg 안 넣으면 5개만, 넣으면 count 만큼 가져옴.
+
+print() 하면 불명확하게 출력됨
+```python
+print(titanic_df.head())
+```
+
+그냥 `titanic_df` 를 두고 실행하면 
+주피터노트북에서만 테이블을 보여줌.
+
+주피터노트북에서 제대로 테이블을 출력하는 방법은 `display()`
+
+```python
+display(titanic_df.tail(3))
+display(titanic_df.head(3))
+```
+
+###### DataFrame 출력 시 Option
+
+![[attaches/Pasted image 20250729110518.png]]
+
+display()를 쓰는 것이 정석이다.
+
+##### set_option()
+
+```python
+pd.set_option('display.max_rows', 1000)
+pd.set_option('display.max_colwidth', 100)
+pd.set_option('display.max_columns', 100)
+
+titanic_df
+```
+
+설정을 안 하고 display 하면 10개 기본 값. 
+이렇게 값을 넣어주고 display하면 전체 테이블이 다 나옴.
+
+##### shape()
+DataFrame의 행(Row)와 열(Column) 크기를 가지고 있는 속성입니다.
+
+```python
+print('DataFrame 크기: ', titanic_df.shape)
+```
+
+```console
+DataFrame 크기:  (891, 12)
+```
+
+##### describe()
+##### value_counts()
+##### sort_values()
+
+
+
+dataframe 로딩
+
+
+
+#### DataFrame의 생성
+
+```python
+dic1 = {'Name': ['Chulmin', 'Eunkyung','Jinwoong','Soobeom'],
+        'Year': [2011, 2016, 2015, 2015],
+        'Gender': ['Male', 'Female', 'Male', 'Male']
+       }
+# 딕셔너리를 DataFrame으로 변환
+data_df = pd.DataFrame(dic1)
+print(data_df)
+print("#"*30)
+
+# 새로운 컬럼명을 추가
+data_df = pd.DataFrame(dic1, columns=["Name", "Year", "Gender", "Age"])
+print(data_df)
+print("#"*30)
+
+# 인덱스를 새로운 값으로 할당. 
+data_df = pd.DataFrame(dic1, index=['one','two','three','four'])
+print(data_df)
+print("#"*30)
+```
+
+```console
+       Name  Year  Gender
+0   Chulmin  2011    Male
+1  Eunkyung  2016  Female
+2  Jinwoong  2015    Male
+3   Soobeom  2015    Male
+##############################
+       Name  Year  Gender  Age
+0   Chulmin  2011    Male  NaN
+1  Eunkyung  2016  Female  NaN
+2  Jinwoong  2015    Male  NaN
+3   Soobeom  2015    Male  NaN
+##############################
+           Name  Year  Gender
+one     Chulmin  2011    Male
+two    Eunkyung  2016  Female
+three  Jinwoong  2015    Male
+four    Soobeom  2015    Male
+##############################
+```
+
+`NaN`은 not a number
+`null`처럼 생각해도 무방하다.
+
+
+#### DataFrame의 컬럼명과 인덱스
+
+```python
+print("columns:",titanic_df.columns)
+print("index:",titanic_df.index)
+print("index value:", titanic_df.index.values)
+```
+
+```console
+columns: Index(['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp',
+       'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked'],
+      dtype='object')
+index: RangeIndex(start=0, stop=891, step=1)
+index value: [  0   1   2   ...  888 889 890] # 생략됨
+```
+
+
+#### info()
+DataFrame내의 컬럼명, 데이터 타입, Null건수, 
+데이터 건수 정보를 제공합니다.
+
+```python
+titanic_df.info()
+```
+
+```console
+<class 'pandas.core.frame.DataFrame'>
+RangeIndex: 891 entries, 0 to 890
+Data columns (total 12 columns):
+ #   Column       Non-Null Count  Dtype  
+---  ------       --------------  -----  
+ 0   PassengerId  891 non-null    int64  
+ 1   Survived     891 non-null    int64  
+ 2   Pclass       891 non-null    int64  
+ 3   Name         891 non-null    object 
+ 4   Sex          891 non-null    object 
+ 5   Age          714 non-null    float64
+ 6   SibSp        891 non-null    int64  
+ 7   Parch        891 non-null    int64  
+ 8   Ticket       891 non-null    object 
+ 9   Fare         891 non-null    float64
+ 10  Cabin        204 non-null    object 
+ 11  Embarked     889 non-null    object 
+dtypes: float64(2), int64(5), object(5)
+memory usage: 83.7+ KB
+```
+
+
+#### describe()
+데이터값들의 평균,표준편차,4분위 분포도를 제공합니다. 
+숫자형 컬럼들에 대해서 해당 정보를 제공합니다.
+
+```python
+titanic_df.describe()
+```
+
+![[attaches/Pasted image 20250729112958.png]]
+
+
+count null값 빼고 몇 개
+mean 평균
+std 표준편차
+min 최소
+
+데이터의 분포도 
+25% 
+50%
+75%
+max 최대
+
+
+
+### 판다스 value_counts 메서드
+
+동일한 개별 데이터 값 몇 건 있는지 정보 제공
+즉 개별 데이터값의 분포도를 제공합니다. 
+자주 사용.
+
+```python
+value_counts = titanic_df['Pclass'].value_counts()
+print(value_counts)
+```
+
+```console
+Pclass
+3    491
+1    216
+2    184
+Name: count, dtype: int64
+```
+
+.head()와 비교
+
+```python
+titanic_df['Pclass'].head()
+```
+
+```console
+0    3
+1    1
+2    3
+3    1
+4    3
+Name: Pclass, dtype: int64
+```
+
+
+
+value_counts()는 과거에는 Series객체에서만 호출 될 수 있었지만 
+현재에는 DataFram에서도 호출가능합니다.
+
+시리즈 `value_counts()` 호출
+
+```python
+titanic_pclass = titanic_df['Pclass']
+print(type(titanic_pclass))
+```
+
+```console
+<class 'pandas.core.series.Series'>
+```
+
+
+데이터 프레임에 `value_counts()` 호출
+
+```python
+# DataFrame에서도 value_counts() 적용 가능. 
+titanic_df[['Pclass', 'Embarked']].value_counts()
+```
+
+```console
+Pclass  Embarked
+3       S           353
+2       S           164
+1       S           127
+        C            85
+3       Q            72
+        C            66
+2       C            17
+        Q             3
+1       Q             2
+Name: count, dtype: int64
+```
+
+브래킷 안에 브래킷으로 list 형태로 여러 컬럼을 넣으면 됨.
+sql의 group by 연산과 비슷
+
+정렬은 내림차순. value_count 값이 큰 값부터 정렬되기 때문에 헷갈릴 수도 있음.
+
+
+value_counts() 메소드를 사용할 때는 
+Null 값을 무시하고 결과값을 내놓기 쉽습니다. 
+value_counts()는 Null값을 포함하여 개별 데이터 값의 건수를 계산할지 여부를 dropna 인자로 판단합니다. 
+dropna는 디폴트로 True이며 이 경우는 Null값을 무시하고 개별 데이터 값의 건수를 계산합니다.
+
+NULL값이 전체 데이터에서 비중이 클 때 dropna = true이면 데이터가 안 맞을 수 있다. 이때 dropna = false로 놓고 다시 해보면 됨.
+
+
+```python
+print('titanic_df 데이터 건수:', titanic_df.shape[0])
+print('기본 설정인 dropna=True로 value_counts()')
+# value_counts()는 디폴트로 dropna=True 이므로 value_counts(dropna=True)와 동일. 
+print(titanic_df['Embarked'].value_counts())
+print(titanic_df['Embarked'].value_counts(dropna=False))
+```
+
+```console
+titanic_df 데이터 건수: 891
+기본 설정인 dropna=True로 value_counts()
+Embarked
+S    644
+C    168
+Q     77
+Name: count, dtype: int64
+Embarked
+S      644
+C      168
+Q       77
+NaN      2
+Name: count, dtype: int64
+```
+
+
+
+
+### 판다스 dataFrame 변환, 컬럼 세트 생성/수정
+#### 판다스 dataFrame과 ndarray 차이점
+
+#### dataframe과 다른 컬렉션 상호 변환
+ndarray에 없는 컬럼명이 있다.
+그래서 컬럼명 변환할 때 columns = `["이름", "나이"]` 이걸 넣어
+
+list
+ndarray
+dict
+
+##### dataFrame을 ndarray로 변환
+`df.values` 반드시 기억
+
+list로 변환
+`df.valuess.tolist()`
+
+dict로 변환
+`df.to_dict()`
+
+
+##### 1차원 dataFrame 변환
+
+```python
+import numpy as np
+
+col_name1=['col1']
+list1 = [1, 2, 3]
+array1 = np.array(list1)
+
+print('array1 shape:', array1.shape )
+df_list1 = pd.DataFrame(list1, columns=col_name1)
+print('1차원 리스트로 만든 DataFrame:\n', df_list1)
+df_array1 = pd.DataFrame(array1, columns=col_name1)
+print('1차원 ndarray로 만든 DataFrame:\n', df_array1)
+```
+
+```console
+array1 shape: (3,)
+1차원 리스트로 만든 DataFrame:
+    col1
+0     1
+1     2
+2     3
+1차원 ndarray로 만든 DataFrame:
+    col1
+0     1
+1     2
+2     3
+```
+
+주의사항. 
+`columns=` 여기 들어가는 값은 무조건 `[ ]`를 써서 넣어야 함. 단일 컬럼만 넣더라도
+
+
+##### shape(2, 3)인 list와 ndarray를 dataFrame 변환
+```python
+# 3개의 칼럼명이 필요함. 
+col_name2=['col1', 'col2', 'col3']
+
+# 2행x3열 형태의 리스트와 ndarray 생성 한 뒤 이를 DataFrame으로 변환. 
+list2 = [[1, 2, 3],
+         [11, 12, 13]]
+array2 = np.array(list2)
+print('array2 shape:', array2.shape )
+df_list2 = pd.DataFrame(list2, columns=col_name2)
+print('2차원 리스트로 만든 DataFrame:\n', df_list2)
+df_array2 = pd.DataFrame(array2, columns=col_name2)
+print('2차원 ndarray로 만든 DataFrame:\n', df_array2)
+```
+
+```console
+array2 shape: (2, 3)
+2차원 리스트로 만든 DataFrame:
+    col1  col2  col3
+0     1     2     3
+1    11    12    13
+2차원 ndarray로 만든 DataFrame:
+    col1  col2  col3
+0     1     2     3
+1    11    12    13
+```
+
+##### dict -> dataFrame 변환
+```python
+# Key는 칼럼명으로 매핑, Value는 리스트 형(또는 ndarray)
+dict = {'col1':[1, 11], 'col2':[2, 22], 'col3':[3, 33]}
+df_dict = pd.DataFrame(dict)
+print('딕셔너리로 만든 DataFrame:\n', df_dict)
+```
+
+```console
+딕셔너리로 만든 DataFrame:
+    col1  col2  col3
+0     1     2     3
+1    11    22    33
+```
+
+
+
+##### DataFrame을 넘파이 ndarray, 리스트, 딕셔너리로 변환하기
+
+###### DataFrame을 ndarray로 변환
+```python
+# DataFrame을 ndarray로 변환
+array3 = df_dict.values
+print('df_dict.values 타입:', type(array3), 'df_dict.values shape:', array3.shape)
+print(array3)
+```
+
+```console
+df_dict.values 타입: <class 'numpy.ndarray'> df_dict.values shape: (2, 3)
+[[ 1  2  3]
+ [11 22 33]]
+```
+
+###### DataFrame을 리스트로 변환
+```python
+# DataFrame을 리스트로 변환
+list3 = df_dict.values.tolist()
+print('df_dict.values.tolist() 타입:', type(list3))
+print(list3)
+
+# DataFrame을 딕셔너리로 변환
+dict3 = df_dict.to_dict('list')
+print('\n df_dict.to_dict() 타입:', type(dict3))
+print(dict3)
+```
+
+```console
+df_dict.values.tolist() 타입: <class 'list'>
+[[1, 2, 3], [11, 22, 33]]
+
+ df_dict.to_dict() 타입: <class 'dict'>
+{'col1': [1, 11], 'col2': [2, 22], 'col3': [3, 33]}
+```
+
+
+
+#### DataFrame의 칼럼 데이터 세트 생성과 수정
+한 방에 새로운 컬럼 생성하고 모든 로우에 값을 할당
+
+```python
+titanic_df['Age_0']=0
+titanic_df.head(3)
+```
+
+
+기존 컬럼의 값을 이용해서 새로운 컬럼 생성하고 값 입력
+```python
+titanic_df['Age_by_10'] = titanic_df['Age']*10
+titanic_df['Family_No'] = titanic_df['SibSp'] + 
+		titanic_df['Parch']+1
+titanic_df.head(3)
+```
+
+기존 컬럼의 값을 수정하기
+```python
+titanic_df['Age_by_10'] = titanic_df['Age_by_10'] + 100
+titanic_df.head(3)
+```
+
+
+rdb 입장에서는 이렇게 쉽게 하나 싶음.
+새로운 컬럼 추가. 
+새로운 컬럼 추가하고 값 할당
+update문 수행
+
+
+
+### DataFrame 데이터 삭제
+#### drop()
+
+컬럼, 로우 삭제
+axis를 통해서 구분
+`axis=0` 은 row 삭제
+`axis=1` 은 column 삭제
+
+대부분 DataFrame에서 컬럼 삭제함. 한 90프로?
+default가 axis=0이기 때문에 axis=1을 넣는 습관 들여야 한다.
+
+
+```python
+titanic_drop_df = titanic_df.drop('Age_0', axis=1 )
+titanic_drop_df.head(3)
+```
+
+![[attaches/Pasted image 20250729140451.png]]
+
+원본의 'Age_0' 컬럼은 삭제되지 않았다.
+
+
+여러 컬럼 삭제하기
+list를 넣어서 삭제하면 됨.
+
+
+
+`inplace=False`
+원본 DataFrame을 그대로 **유지**.
+drop된 DataFrame을 새롭게 객체 변수로 받기
+
+메모리를 줄이기 위해 inplace=True 하게 되면
+원본을 바꿈. 그리고 반환값 none
+그래서 inplace=True일 때는 변수에 할당해봤자 none이다.
+
+titanic_df = titanic_df.drop()
+
+
+![[attaches/Pasted image 20250729140228.png]]
+
+
+
+```python
+drop_result = titanic_df.drop(['Age_0', 'Age_by_10', 'Family_No'], axis=1, inplace=True)
+print(' inplace=True 로 drop 후 반환된 값:',drop_result)
+titanic_df.head(3)
+```
+
+![[attaches/Pasted image 20250729140700.png]]
+
+이때 drop_result 변수에 값을 할당하는 것처럼 코드를 작성하게 되면 헷갈린다. 이렇게 쓰지 말 것.
+드롭을 자기에 적용했으니까.
+
+
+##### axis=0 은 row방향 데이터 삭제
+
+
+```python
+pd.set_option('display.width', 1000)
+pd.set_option('display.max_colwidth', 15)
+print('#### before axis 0 drop ####')
+print(titanic_df.head(6))
+
+titanic_df.drop([0,1,2], axis=0, inplace=True)
+
+print('#### after axis 0 drop ####')
+print(titanic_df.head(3))
+```
+
+```console
+#### before axis 0 drop ####
+   PassengerId  Survived  Pclass            Name     Sex   Age  SibSp  Parch          Ticket     Fare Cabin Embarked
+0            1         0       3  Braund, Mr....    male  22.0      1      0       A/5 21171   7.2500   NaN        S
+1            2         1       1  Cumings, Mr...  female  38.0      1      0        PC 17599  71.2833   C85        C
+2            3         1       3  Heikkinen, ...  female  26.0      0      0  STON/O2. 31...   7.9250   NaN        S
+3            4         1       1  Futrelle, M...  female  35.0      1      0          113803  53.1000  C123        S
+4            5         0       3  Allen, Mr. ...    male  35.0      0      0          373450   8.0500   NaN        S
+5            6         0       3  Moran, Mr. ...    male   NaN      0      0          330877   8.4583   NaN        Q
+
+#### after axis 0 drop ####
+   PassengerId  Survived  Pclass            Name     Sex   Age  SibSp  Parch  Ticket     Fare Cabin Embarked
+3            4         1       1  Futrelle, M...  female  35.0      1      0  113803  53.1000  C123        S
+4            5         0       3  Allen, Mr. ...    male  35.0      0      0  373450   8.0500   NaN        S
+5            6         0       3  Moran, Mr. ...    male   NaN      0      0  330877   8.4583   NaN        Q
+```
+
+삭제하고 싶은 row의 index를 [] 안에 넣어서 삭제
+삭제 후에 인덱스가 새로 재편되지 않고 기존 인덱스 유지.
+인덱스는 고유하기만 하면 되니까 재편할 필요 없음.
+
+
+### 판다스 Index 객체 이해
+
+인덱스 깊이 이해 못하고 진행하면 나중에 어렵다.
+
+df 는 2차원
+series 는 1차원
+
+Index는?
+rdbms의 pk와 유사.
+레코드를 고유하게 식별하는 객체
+but 판다스 Index는 별도 컬럼값 아니다.
+Index는 오직 식별용으로만 사용
+
+연산함수는 오직 컬럼에 대해서만 연산한다.
+	Index는 연산 함수 적용에서 제외
+
+df.index series.index 속성으로
+
+RangeIndex
+
+판다스 index는 반드시 숫자 아니어도 됨.
+고유값을 유지할 수 있다면 문자, Datetime도 가능.
+
+```python
+# 원본 파일 재 로딩 
+titanic_df = pd.read_csv('titanic_train.csv')
+# Index 객체 추출
+indexes = titanic_df.index
+print(indexes)
+# Index 객체를 실제 값 arrray로 변환 
+print('Index 객체 array값:\n',indexes.values)
+
+```
+
+```console
+RangeIndex(start=0, stop=891, step=1)
+Index 객체 array값:
+ [  0   1   2  ...... 888 889 890]
+```
+
+891에서 stop이니까 891 - 1 까지 값이 들어있다.
+
+
+
+```python
+print(type(indexes.values)) 
+print(indexes.values.shape)
+print(indexes[:5].values) # ndarray와 유사하게 동작함.
+print(indexes.values[:5]) # 아예 ndarray로 만들어서 print
+print(indexes[6])
+```
+
+```console
+<class 'numpy.ndarray'> 
+(891,)
+[0 1 2 3 4] 
+[0 1 2 3 4]
+6
+```
+
+인덱스 자체는 wrapping이 ndarray라고 보면 됨.
+
+#### 인덱스는 immutable
+값을 할당하는 동작 안 된다.
+`indexes[0] = 5` 이런 거 못 해. 
+리셋은 가능
+
+
+인덱스는 오직 식별용. 연산 함수 적용 X
+
+```python
+series_fair = titanic_df['Fare']
+print(type(series_fair))
+print('Fair Series max 값:', series_fair.max())
+print('Fair Series sum 값:', series_fair.sum())
+print('sum() Fair Series:', sum(series_fair))
+print('Fair Series + 3:\n',(series_fair + 3).head(3) )
+```
+
+```console
+<class 'pandas.core.series.Series'>
+Fair Series max 값: 512.3292
+Fair Series sum 값: 28693.9493
+sum() Fair Series: 28693.9493
+Fair Series + 3:
+ 0    10.2500
+1    74.2833
+2    10.9250
+Name: Fare, dtype: float64
+```
+
+DataFrame에 `['colname']`하면 series 리턴
+보기에 인덱스 때문에 2차원 처럼 보여도 series다.
+값만 연산한다. 1차원임.
+
+#### reset_index()
+
+인덱스를 갈아엎어
+새로 할당. 연속 숫자형으로.
+기존 인덱스는 'index'라는 새로운 컬럼명으로 추가
+
+```python
+titanic_reset_df = titanic_df.reset_index(inplace=False)
+titanic_reset_df.head(3)
+```
+
+![[attaches/Pasted image 20250729143055.png]]
+
+inplace=False는 호출한 원본 df 유지
+새 객체 반환
+
+reset_index() 결과 기존 index는 index 컬럼에 저장.
+새 index가 0부터 
+
+
+```python
+titanic_reset_df = titanic_df.reset_index(drop=True, 
+		inplace=False)
+titanic_reset_df.head(3)
+```
+
+drop=True 면 기존 index를 컬럼 추가 안 함.
+새 index가 할당 되는 것은 동일함.
+
+reset_index()는 series에 적용할 때 많이 쓴다.
+
+
+```python
+titanic_df['Pclass'].value_counts()
+```
+
+```console
+Pclass
+3    491
+1    216
+2    184
+Name: count, dtype: int64
+```
+
+무조건 value_counts()는 값이 큰 순서로 내림차순
+
+
+```python
+print('### before reset_index ###')
+value_counts = titanic_df['Pclass'].value_counts()
+print(value_counts)
+print('value_counts 객체 변수 타입과 shape:',type(value_counts), value_counts.shape)
+
+new_value_counts_01 = value_counts.reset_index(inplace=False)
+print('### After reset_index ###')
+print(new_value_counts_01)
+print('new_value_counts_01 객체 변수 타입과 shape:',type(new_value_counts_01), new_value_counts_01.shape)
+
+new_value_counts_02 = value_counts.reset_index(drop=True, inplace=False)
+print('### After reset_index with drop ###')
+print(new_value_counts_02)
+print('new_value_counts_02 객체 변수 타입과 shape:',type(new_value_counts_02), new_value_counts_02.shape)
+```
+
+```console
+### before reset_index ###
+Pclass
+3    491
+1    216
+2    184
+Name: count, dtype: int64
+value_counts 객체 변수 타입과 shape: <class 'pandas.core.series.Series'> (3,)
+### After reset_index ###
+   Pclass  count
+0       3    491
+1       1    216
+2       2    184
+new_value_counts_01 객체 변수 타입과 shape: <class 'pandas.core.frame.DataFrame'> (3, 2)
+### After reset_index with drop ###
+0    491
+1    216
+2    184
+Name: count, dtype: int64
+new_value_counts_02 객체 변수 타입과 shape: <class 'pandas.core.series.Series'> (3,)
+```
+
+
+
+##### reset_index() 주요 사용 예시
+
+```python
+# DataFrame의 rename()은 인자로 columns를 dictionary 형태로 받으면 '기존 컬럼명':'신규 컬럼명' 형태로 변환
+new_value_counts_01 = titanic_df['Pclass'].value_counts().reset_index()
+new_value_counts_01.rename(columns={'index':'Pclass', 'Pclass':'Pclass_count'})
+```
+
+![[attaches/Pasted image 20250729144537.png]]
+
+
+### 판다스 데이터 인덱싱과 필터링
+
+df에 [] 사용
+`tdf['Name']`
+컬럼기반 필터링
+불린 인덱싱 필터링 제공
+
+df와 ndarray 가장 큰 차이
+df는 columnName이 있다.
+
+
+loc[], iloc[]
+df가 제공하는 인덱싱 2가지
+명칭/위치 기반 인덱싱
+
+모두 **()가 아닌 []** 임에 유의
+
+![[attaches/Pasted image 20250729145117.png]]
+
+[] 안에 단일 컬럼명 -> series 반환
+
+[] 에 여러 컬럼명 list로 입력 -> DataFrame 반환
+
+numpy의 ndarray에서 []는 위치인덱스 값 입력
+
+
+```python
+# DataFrame객체에서 []연산자내에 한개의 컬럼만 입력하면 Series 객체를 반환  
+series = titanic_df['Name']
+print(series.head(3))
+print("## type:",type(series), 'shape:', series.shape)
+
+# DataFrame객체에서 []연산자내에 여러개의 컬럼을 리스트로 입력하면 그 컬럼들로 구성된 DataFrame 반환  
+filtered_df = titanic_df[['Name', 'Age']]
+display(filtered_df.head(3))
+print("## type:", type(filtered_df), 'shape:', filtered_df.shape)
+
+# DataFrame객체에서 []연산자내에 한개의 컬럼을 리스트로 입력하면 한개의 컬럼으로 구성된 DataFrame 반환 
+one_col_df = titanic_df[['Name']]
+display(one_col_df.head(3))
+print("## type:", type(one_col_df), 'shape:', one_col_df.shape)
+```
+
+```console
+0    Braund, Mr....
+1    Cumings, Mr...
+2    Heikkinen, ...
+Name: Name, dtype: object
+## type: <class 'pandas.core.series.Series'> shape: (891,)
+
+
+
+## type: <class 'pandas.core.frame.DataFrame'> shape: (891, 2)
+
+
+
+## type: <class 'pandas.core.frame.DataFrame'> shape: (891, 1)
+```
+
+|     | Name           | Age  |
+| --- | -------------- | ---- |
+| 0   | Braund, Mr.... | 22.0 |
+| 1   | Cumings, Mr... | 38.0 |
+| 2   | Heikkinen, ... | 26.0 |
+
+| |Name|
+|---|---|
+|0|Braund, Mr....|
+|1|Cumings, Mr...|
+|2|Heikkinen, ...|
+
+내가 한 개의 컬럼이지만 명확하게 DataFrame을 원할 때 이렇게 쓴다.
+`df[['columnName']]`
+
+
+
+![[attaches/Pasted image 20250729145229.png]]
+
+[] 안에 숫자 사용하면 에러 발생
+```python
+print('[ ] 안에 숫자 index는 KeyError 오류 발생:\n', titanic_df[0])
+```
+
+키 값을 찾아야 해서 안 됨.
+
+반면에 slicing은 가능
+
+```python
+titanic_df[0:2]
+```
+
+결과 df display()
+
+| PassengerId | Survived | Pclass | Name | Sex            | Age    | SibSp | Parch | Ticket | Fare      | Cabin   | Embarked |     |
+| ----------- | -------- | ------ | ---- | -------------- | ------ | ----- | ----- | ------ | --------- | ------- | -------- | --- |
+| 0           | 1        | 0      | 3    | Braund, Mr.... | male   | 22.0  | 1     | 0      | A/5 21171 | 7.2500  | NaN      | S   |
+| 1           | 2        | 1      | 1    | Cumings, Mr... | female | 38.0  | 1     | 0      | PC 17599  | 71.2833 | C85      | C   |
+
+그러나 [] 안에 slicing을 사용하지마
+헷갈린다.
+명확하게 iloc[] 연산자를 대신 사용하자.
+
+
+
+
+
+#### 명칭 기반 인덱싱
+명칭(label) 기반 인덱싱. 
+컬럼 명칭 기반 열 위치 지정
+(행 위치는 index 이용)
+
+위치(Position) 기반 인덱싱은 
+0을 출발점으로
+가로축, 세로축 좌표 기반 행과 열 위치 기반 데이터 지정
+index를 이용하지 않음.
+
+![[attaches/Pasted image 20250729145704.png]]
+
+```python
+data = {'Name': ['Chulmin', 'Eunkyung','Jinwoong','Soobeom'],
+        'Year': [2011, 2016, 2015, 2015],
+        'Gender': ['Male', 'Female', 'Male', 'Male']
+       }
+data_df = pd.DataFrame(data, index=['one','two','three','four'])
+data_df
+```
+
+|       | Name     | Year | Gender |
+| ----- | -------- | ---- | ------ |
+| one   | Chulmin  | 2011 | Male   |
+| two   | Eunkyung | 2016 | Female |
+| three | Jinwoong | 2015 | Male   |
+| four  | Soobeom  | 2015 | Male   |
+
+```python
+data_df.iloc[0, 0]
+```
+
+```console
+'Chulmin'
+```
+
+```python
+# 아래 코드는 오류를 발생합니다. 
+data_df.iloc[0, 'Name']
+
+# 아래 코드는 오류를 발생합니다. 
+data_df.iloc['one', 0]
+```
+
+```console
+Can only index by location with a [integer, integer slice ...
+```
+
+iloc는 오직 interager만 가능.
+
+
+
+
+#### 명칭 기반과 위치기반 구분
+
+RangeIndex와 행 위치 개념 동일한 거 아님?
+아님
+왜?
+인덱스는 0부터 시작 x. 문자도 가능. 고유하기만 하면 된다.
+어떤 이유에서건 RangeIndex가 변경되었을 때.
+`iloc[0, 1]` 값은 변경 X.
+
+`loc[0. 'PassengerID']` 값을 찾을 수 없을 수도
+
+![[attaches/Pasted image 20250729150133.png]]
+
+##### iloc 예제
+
+```python
+print("\n iloc[1, 0] 두번째 행의 첫번째 열 값:", data_df.iloc[1,0])
+print("\n iloc[2, 1] 세번째 행의 두번째 열 값:", data_df.iloc[2,1])
+
+print("\n iloc[0:2, [0,1]] 첫번째에서 두번째 행의 첫번째, 두번째 열 값:\n", data_df.iloc[0:2, [0,1]])
+print("\n iloc[0:2, 0:3] 첫번째에서 두번째 행의 첫번째부터 세번째 열값:\n", data_df.iloc[0:2, 0:3])
+
+print("\n 모든 데이터 [:] \n", data_df.iloc[:])
+print("\n 모든 데이터 [:, :] \n", data_df.iloc[:, :])
+```
+
+```console
+ iloc[1, 0] 두번째 행의 첫번째 열 값: Eunkyung
+
+ iloc[2, 1] 세번째 행의 두번째 열 값: 2015
+
+ iloc[0:2, [0,1]] 첫번째에서 두번째 행의 첫번째, 두번째 열 값:
+          Name  Year
+one   Chulmin  2011
+two  Eunkyung  2016
+
+ iloc[0:2, 0:3] 첫번째에서 두번째 행의 첫번째부터 세번째 열값:
+          Name  Year  Gender
+one   Chulmin  2011    Male
+two  Eunkyung  2016  Female
+
+ 모든 데이터 [:] 
+            Name  Year  Gender
+one     Chulmin  2011    Male
+two    Eunkyung  2016  Female
+three  Jinwoong  2015    Male
+four    Soobeom  2015    Male
+
+ 모든 데이터 [:, :] 
+            Name  Year  Gender
+one     Chulmin  2011    Male
+two    Eunkyung  2016  Female
+three  Jinwoong  2015    Male
+four    Soobeom  2015    Male
+```
+
+
+
+보통 데이터프레임에서 iloc를 언제 많이 쓰는지
+맨 마지막 데이터가 타겟일 경우.
+
+
+```python
+print("\n 맨 마지막 칼럼 데이터 [:, -1] \n", data_df.iloc[:, -1])
+print("\n 맨 마지막 칼럼을 제외한 모든 데이터 [:, :-1] \n", data_df.iloc[:, :-1])
+```
+
+```console
+맨 마지막 칼럼 데이터 [:, -1] 
+ one        Male
+two      Female
+three      Male
+four       Male
+Name: Gender, dtype: object
+
+ 맨 마지막 칼럼을 제외한 모든 데이터 [:, :-1] 
+            Name  Year
+one     Chulmin  2011
+two    Eunkyung  2016
+three  Jinwoong  2015
+four    Soobeom  2015
+```
+
+
+
+iloc는 불린 인덱싱 지원 X
+
+
+##### loc 예제
+
+```python
+data_df.loc['one', 'Name']
+```
+
+```console
+'Chulmin'
+```
+
+
+인덱스가 'one' 이라 0을 넣으면 에러
+
+인덱스가 문자일 때 slicing 하면 endIndex 포함 여부
+
+```python
+print('위치기반 iloc slicing\n', data_df.iloc[0:1, 0],'\n')
+print('명칭기반 loc slicing\n', data_df.loc['one':'two', 'Name'])
+```
+
+```console
+위치기반 iloc slicing
+ one    Chulmin
+Name: Name, dtype: object 
+
+명칭기반 loc slicing
+ one     Chulmin
+two    Eunkyung
+Name: Name, dtype: object
+```
+
+문자열 'two'에서 -1을 할 수 없기 때문에 'two' 행이 결과에 포함시켜 반환.
+slicing 할 때 주의.
+이러한 함정들이 있어서 잘 안 쓰고 불린 인덱싱을 주로 사용한다.
+
+
+```python
+print('인덱스 값 three인 행의 Name칼럼값:', data_df.loc['three', 'Name'])
+print('\n인덱스 값 one 부터 two까지 행의 Name과 Year 칼럼값:\n', data_df.loc['one':'two', ['Name', 'Year']])
+print('\n인덱스 값 one 부터 three까지 행의 Name부터 Gender까지의 칼럼값:\n', data_df.loc['one':'three', 'Name':'Gender'])
+print('\n모든 데이터 값:\n', data_df.loc[:])
+print('\n불린 인덱싱:\n', data_df.loc[data_df.Year >= 2014])
+```
+
+```console
+인덱스 값 three인 행의 Name칼럼값: Jinwoong
+
+인덱스 값 one 부터 two까지 행의 Name과 Year 칼럼값:
+          Name  Year
+one   Chulmin  2011
+two  Eunkyung  2016
+
+인덱스 값 one 부터 three까지 행의 Name부터 Gender까지의 칼럼값:
+            Name  Year  Gender
+one     Chulmin  2011    Male
+two    Eunkyung  2016  Female
+three  Jinwoong  2015    Male
+
+모든 데이터 값:
+            Name  Year  Gender
+one     Chulmin  2011    Male
+two    Eunkyung  2016  Female
+three  Jinwoong  2015    Male
+four    Soobeom  2015    Male
+
+불린 인덱싱:
+            Name  Year  Gender
+two    Eunkyung  2016  Female
+three  Jinwoong  2015    Male
+four    Soobeom  2015    Male
+```
+
+**loc는 불린 인덱싱 can**
+
+
+#### 불린 인덱싱
+
+위치기반, 명칭 기반 필요 없음.
+조건식을 [] 안에 기입
+간편한 필터링 can
+
+조건에 해당되는 데이터를 출력할 일이 훨씬 많다.
+
+`tdf_boolean = tdf[tdf['Age'] > 60]`
+
+
+반면에 위치 기반 사용 예시
+`tdf[:, :-1]` 
+맨 마지막 컬럼의 값, 모든 row를 다 가져오기
+
+
+```python
+titanic_df[ titanic_df['Pclass'] == 3].head(3)
+```
+
+|PassengerId|Survived|Pclass|Name|Sex|Age|SibSp|Parch|Ticket|Fare|Cabin|Embarked|
+|---|---|---|---|---|---|---|---|---|---|---|---|
+|0|1|0|3|Braund, Mr....|male|22.0|1|0|A/5 21171|7.250|NaN|S|
+|2|3|1|3|Heikkinen, ...|female|26.0|0|0|STON/O2. 31...|7.925|NaN|S|
+|4|5|0|3|Allen, Mr. ...|male|35.0|0|0|373450|8.050|NaN|S|
+
+Pclass가 3인 행 3개 가져와라.
+
+
+```python
+pd.set_option('display.max_colwidth', 200)
+titanic_df = pd.read_csv('titanic_train.csv')
+titanic_boolean = titanic_df[titanic_df['Age'] > 60]
+print(type(titanic_boolean))
+```
+
+```console
+<class 'pandas.core.frame.DataFrame'>
+```
+
+
+
+```python
+titanic_df[titanic_df['Age'] > 60][['Name','Age']].head(3)
+```
+
+|     | Name                           | Age  |
+| --- | ------------------------------ | ---- |
+| 33  | Wheadon, Mr. Edward H          | 66.0 |
+| 54  | Ostby, Mr. Engelhart Cornelius | 65.0 |
+| 96  | Goldschmidt, Mr. George B      | 71.0 |
+
+앞에는 불린 인덱싱, 뒤에 컬럼은 2개 이상이므로 [] 안에 리스트로 넣음
+
+동일한 불린 인덱싱을 loc를 써서도 수행 can
+
+```python
+titanic_df.loc[titanic_df['Age'] > 60, ['Name','Age']].head(3)
+```
+
+but 둘다 쓰려면 혼동
+
+& 조건식
+
+```python
+titanic_df[ (titanic_df['Age'] > 60) & (titanic_df['Pclass']==1) & (titanic_df['Sex']=='female')]
+```
+
+|     | PassengerId | Survived | Pclass | Name                                      | Sex    | Age  | SibSp | Parch | Ticket | Fare    | Cabin | Embarked |
+| --- | ----------- | -------- | ------ | ----------------------------------------- | ------ | ---- | ----- | ----- | ------ | ------- | ----- | -------- |
+| 275 | 276         | 1        | 1      | Andrews, Miss. Kornelia Theodosia         | female | 63.0 | 1     | 0     | 13502  | 77.9583 | D7    | S        |
+| 829 | 830         | 1        | 1      | Stone, Mrs. George Nelson (Martha Evelyn) | female | 62.0 | 0     | 0     | 113572 | 80.0000 | B28   | NaN      |
+
+**개별 조건을 반드시 () 로 감싸**
+
+
+```python
+cond1 = titanic_df['Age'] > 60
+cond2 = titanic_df['Pclass']==1
+cond3 = titanic_df['Sex']=='female'
+titanic_df[ cond1 & cond2 & cond3]
+```
+
+조건식이 복잡할 때 가독성을 높이기 위해 별도 변수에 할당하는 방법
+결과는 같음.
+
 
