--- a/다울 2025-07-25.md
+++ b/다울 2025-07-25.md
@@ -13,18 +13,17 @@ Yesterday: [[다울 2025-07-24]]
 ## 오늘 작업 목표
 - [x] 일일 업무일지 작성 ✅ 2025-07-29
 	- [x] 일일업무일지 ✅ 2025-07-25
-	- [ ] 휴가계획 작성
+	- [x] 휴가계획 작성 ✅ 2025-07-31
 - [x] 주간 업무일지 작성 ✅ 2025-07-25
 - [x] 선석계획 잔량표시, 수동편성 기능 마무리 ✅ 2025-07-25
 - [x] gs인증 버전 소스코드, 솔루션 파일 백업 ✅ 2025-07-25
 - [x] gs인증 재인증용 해시txt 생성 ✅ 2025-07-25
-- [ ] 스마트보드에서 뿌려야하는 데이터
-	- [ ] tb_com_berth
-	- [ ] tb_dock_work
-		- [ ] 여기서 sh_dock_pos 값 화면에 어떻게 그리는지
-		- [ ] 기존 스마트보드 화면 캡쳐에 선석에 계류장치 번호. 그 번호를 기반으로 좌표를 잡아서 화면에 뿌림
-	- [ ] tb_unload_work
-		- [ ] 
+- [x] 스마트보드에서 뿌려야하는 데이터 ✅ 2025-07-31
+	- [x] tb_com_berth ✅ 2025-07-31
+	- [x] tb_dock_work ✅ 2025-07-31
+		- [x] 여기서 sh_dock_pos 값 화면에 어떻게 그리는지 ✅ 2025-07-31
+		- [x] 기존 스마트보드 화면 캡쳐에 선석에 계류장치 번호. 그 번호를 기반으로 좌표를 잡아서 화면에 뿌림 ✅ 2025-07-31
+	- [x] tb_unload_work ✅ 2025-07-31
 
 ###### svn 특정 날짜의 소스코드를 export하는 법
 ![[journals/temp/svn 특정 날짜의 소스코드를 export하는 법]]
