--- a/다울 2025-07-28.md
+++ b/다울 2025-07-28.md
@@ -5,7 +5,7 @@ aliases:
 tags: [다울일간노트]
 ---
 
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2025-08-20
 지난 주 금: [[다울 2025-07-25]]
 Tomorrow: [[다울 2025-07-29]] 
 
