--- a/다울 2025-08-06.md
+++ b/다울 2025-08-06.md
@@ -20,7 +20,7 @@ Tomorrow: [[../다울 2025-08-07|다울 2025-08-07]]
 	- [x] 프로젝트관리 ✅ 2025-08-07
 		- [x] 콤보박스 크기 줄이고 dropdown width 크기 크게 ✅ 2025-08-07
 		- [x] 필터링 조건 초기화 버튼 ✅ 2025-08-07
-		- [ ] 원가관리 화면 이동 버튼
+		- [x] 원가관리 화면 이동 버튼 ✅ 2025-09-01
 
 
 
