--- a/다울 2025-08-07.md
+++ b/다울 2025-08-07.md
@@ -13,17 +13,17 @@ Tomorrow: [[다울 2025-08-08]]
 
 
 ## 오늘 작업 목표
-- [ ] 근로안심 패키지 서류 준비
-	- [ ] 지원금신청서(근로자) 
-	- [ ] 개인정보 수집·이용에 대한 동의서(근로자)
-	- [ ] 고용둔화업종 대응지원사업 부정수급 방지 안내 확인서(근로자)
+- [x] 근로안심 패키지 서류 준비 ✅ 2025-09-01
+	- [x] 지원금신청서(근로자) ✅ 2025-09-01
+	- [x] 개인정보 수집·이용에 대한 동의서(근로자) ✅ 2025-09-01
+	- [x] 고용둔화업종 대응지원사업 부정수급 방지 안내 확인서(근로자) ✅ 2025-09-01
 	- [x] 재직증명서 ✅ 2025-08-07
 	- [x] 급여명세서 ✅ 2025-08-07
 		- [x] 3, 4, 5, 6, 7 ✅ 2025-08-07
 		- [x] 사회보험료 급여명세서 ✅ 2025-08-07
 	- [x] 주민등록초본 ✅ 2025-08-07
 	- [x] 통장사본 ✅ 2025-08-07
-	- [ ] 임대차 계약서
+	- [x] 임대차 계약서 ✅ 2025-09-01
 	- [x] 월세입금내역 이체증 ✅ 2025-08-07
 
 <제출서류>  
