--- a/다울 2025-08-19.md
+++ b/다울 2025-08-19.md
@@ -21,10 +21,10 @@ Tomorrow: [[다울 2025-08-20]]
 - [x] 직원정보 컬럼 추가 화면 반영 ✅ 2025-08-19
 - [x] 원청사, 계약사 컬럼 추가 화면 반영 ✅ 2025-08-19
 - [x] 협력사 조회, 입력, 수정, 삭제 ✅ 2025-08-19
-- [ ] 개인실적관리 조회 화면
-	- [ ] 정산년도
-	- [ ] 사업부서
-	- [ ] 소속
+- [x] 개인실적관리 조회 화면 ✅ 2025-09-01
+	- [x] 정산년도 ✅ 2025-09-01
+	- [x] 사업부서 ✅ 2025-09-01
+	- [x] 소속 ✅ 2025-09-01
 - [ ] dock_shift 계획(정확히는 실적)을 오늘날짜까지 해서 일정표에 표시
 - [ ] dock_shift의 실적을 표시하는 버튼과 기본 order plan 표시하는 버튼(정확히는 모드를 나눠서 조회하여 일정표에 데이터 바인딩)
 
