--- a/다울 2025-08-22.md
+++ b/다울 2025-08-22.md
@@ -12,7 +12,7 @@ Yesterday: [[다울 2025-08-21]]
 
 
 ## 오늘 작업 목표
-- [ ] 개인실적. 집계. 사업부서단위, 팀단위 
+- [x] 개인실적. 집계. 사업부서단위, 팀단위 ✅ 2025-09-01
       데이터그리드는 탭 화면으로. 스마트공장 참고
 - [x] 설정 직원정보 목표금액 자동계산. mm이랑 단가 수정 시 이벤트 발생 ✅ 2025-08-22
 
