--- a/다울 2025-08-26.md
+++ b/다울 2025-08-26.md
@@ -11,12 +11,11 @@ Tomorrow: [[다울 2025-08-27]]
 
 
 ## 오늘 작업 목표
-- [ ] KPI 목표관리
-	- [ ] 개인별, 사업부서별, 팀단위
-- [ ] SUB6 (연도별 KPI)
-- [ ] MST 진행단계 기타보고 제외
-- [ ] 직원별 프로젝트 이력
-- [ ] KPI 
+- [x] KPI 목표관리 ✅ 2025-09-01
+	- [x] 개인별, 사업부서별, 팀단위 ✅ 2025-09-01
+- [x] SUB6 (연도별 KPI) ✅ 2025-09-01
+- [x] MST 진행단계 기타보고 제외 ✅ 2025-09-01
+- [x] 직원별 프로젝트 이력 ✅ 2025-09-01
 
  SUB6 PK : YYYY / 구분코드 0 1 2 / 
 
