--- a/다울 2025-08-04.md
+++ b/다울 2025-08-04.md
@@ -13,16 +13,16 @@ Tomorrow: [[다울 2025-08-05]]
 
 
 ## 오늘 작업 목표
-- [ ] pms 관련 조회, 입력, 수정, 삭제 기능 프로젝트 구현
-	- [ ] 프로젝트관리 조회화면
-		- [ ] 입력, 수정 화면으로 전환. 더블클릭 이벤트
-		- [ ] 조회 조건 계약기간
-		- [ ] 계약처
-		- [ ] 원청사
-		- [ ] 사업부
-	- [ ] 코드 관리
-		- [ ] 사업부
-	- [ ] 설정 화면
+- [x] pms 관련 조회, 입력, 수정, 삭제 기능 프로젝트 구현 ✅ 2025-09-01
+	- [x] 프로젝트관리 조회화면 ✅ 2025-09-01
+		- [x] 입력, 수정 화면으로 전환. 더블클릭 이벤트 ✅ 2025-09-01
+		- [x] 조회 조건 계약기간 ✅ 2025-09-01
+		- [x] 계약처 ✅ 2025-09-01
+		- [x] 원청사 ✅ 2025-09-01
+		- [x] 사업부 ✅ 2025-09-01
+	- [x] 코드 관리 ✅ 2025-09-01
+		- [x] 사업부 ✅ 2025-09-01
+	- [x] 설정 화면 ✅ 2025-09-01
 		- [x] 직원 리스트 ✅ 2025-08-04
 		- [x] 계약처 목록 ✅ 2025-08-04
 		- [x] 원청사 목록 ✅ 2025-08-04
