--- a/다울 2025-09-02.md
+++ b/다울 2025-09-02.md
@@ -26,12 +26,11 @@ pw변경 90일 if 변경x? => login false
 
 
 
-- [ ] 플젝관리. 진척도 컬럼 추가
-- [ ] 설정. 직원정보. 자격증, 경력 입력, 자격증, 경력 컬럼 추가.
-- [ ] 수정, 삭제 시 history 남기기. status_label에 `[아이디] 메시지` 
-- [ ] 
+- [x] 플젝관리. 진척도 컬럼 추가 ✅ 2025-09-05
+- [x] 설정. 직원정보. 자격증, 경력 입력, 자격증, 경력 컬럼 추가. ✅ 2025-09-05
+- [x] 수정, 삭제 시 history 남기기. status_label에 `[아이디] 메시지` ✅ 2025-09-05
 
-
+[[../noGitSync/SDMS DWKEY RESET|SDMS DWKEY RESET]]
 
 ## Not done yet
 
