--- a/다울 2025-09-02.md
+++ b/다울 2025-09-02.md
@@ -13,7 +13,7 @@ Tomorrow: [[다울 2025-09-03]]
 
 
 ## 오늘 작업 목표
-- [ ] 10:30 pms 화면 리뷰. 사장님.
+- [x] 10:30 pms 화면 리뷰. 사장님. ✅ 2025-09-18
 
 pms 사장님 리뷰 정리
 유저별 접근권한 정리
