--- a/다울 2025-09-29.md
+++ b/다울 2025-09-29.md
@@ -5,9 +5,9 @@ aliases:
 tags: [다울일간노트]
 ---
 
-- [ ] 나스 솔루션 link, source 백업하기
-지난 주 금: [[다울 2025-09-26]]
-Tomorrow: [[다울 2025-09-30]] 
+- [x] 나스 솔루션 link, source 백업하기
+	지난 주 금: [[다울 2025-09-26]]
+	Tomorrow: [[다울 2025-09-30]] ✅ 2025-10-17
 
 
 
