--- a/다울 2025-10-22.md
+++ b/다울 2025-10-22.md
@@ -13,7 +13,7 @@ Tomorrow: [[다울 2025-10-23]]
 
 
 ## 오늘 작업 목표
-- [ ] 스케쥴 수동편성에
+- [x] 스케쥴 수동편성에 ✅ 2025-10-24
 	- [x] 스케쥴 처음 끝 겹치는 곳은 2번 rIdx 사용 ✅ 2025-10-14
 	- [x] 스케쥴 2번 라인에 놓을 수 있는 경우와 없는 경우 구분하여 드롭 가능영역 표시 ✅ 2025-10-22
 		- [x] 일단 모두 1번 선석에 드롭가능 표시 ✅ 2025-10-21
@@ -23,8 +23,6 @@ Tomorrow: [[다울 2025-10-23]]
 - [ ] 업무일지 업데이트
 	- [ ] ai task와 연동 테스트 일정
 	- [ ] 코드 수정 마무리 언제 언제까지
-
-
 
 ## Not done yet
 
@@ -54,3 +52,4 @@ dv.taskList(dv.pages('-"3. Resource/Templates"').file.tasks
 
 ###### Control.BeginInvoke in WinForm
 ![[journals/temp/Control.BeginInvoke in WinForm]]
+
