--- a/다울 2025-09-19.md
+++ b/다울 2025-09-19.md
@@ -22,19 +22,19 @@ Yesterday: [[다울 2025-09-18]]
 
 
 ## 오늘 작업 목표
-- [ ] order, plan delete command
+- [x] order, plan delete command ✅ 2025-11-24
 - [ ] 일정표. 과거, 진행은 시프팅, 미래는 선석배정계획 테이블에서 조회
-- [ ] 입항예정정보 조회 시 원료하역 진행 구분 코드 값 추가
-	- [ ] 입항예정 선박 목록을 추가, 제외 할 수 있는 팝업 화면 추가
-	- [ ] 진행 값이 (입항예정=1)인 데이터를 한번에 목록에 추가할 수 있도록 버튼 기능
+- [x] 입항예정정보 조회 시 원료하역 진행 구분 코드 값 추가 ✅ 2025-11-18
+	- [x] 입항예정 선박 목록을 추가, 제외 할 수 있는 팝업 화면 추가 ✅ 2025-11-18
+	- [x] 진행 값이 (입항예정=1)인 데이터를 한번에 목록에 추가할 수 있도록 버튼 기능 ✅ 2025-11-24
 	- [ ] SHIFTING에 실적, 진행정보 값이 있는 입항예정선박 별도 가이드 표시
 	- [ ] ORDER2에 계획이 있는 입항예정선박 별도 가이드 표시
-- [ ] 확정 전 확정하려고 체크한 계획의 총 비용 합계 표시
+- [x] 확정 전 확정하려고 체크한 계획의 총 비용 합계 표시 ✅ 2025-11-18
 - [ ] 확정 전 확정하지 않을 계획을 일정표에서 마우스로 클릭해서 체크 해제 기능 추가
-- [ ] 선석별 하역기 하역기준율 조회, 수정 화면 추가
-- [ ] 브랜드별 하역률 조회, 수정 화면 추가
-- [ ] 확정 전 체크된 선박의 조체선료 총합 표시
-- [ ] 일정표에 선석계획이 겹치는 문제. 선석 하나당 2줄로 나눠서 표시
+- [x] 선석별 하역기 하역기준율 조회, 수정 화면 추가 ✅ 2025-11-18
+- [x] 브랜드별 하역률 조회, 수정 화면 추가 ✅ 2025-11-18
+- [x] 확정 전 체크된 선박의 조체선료 총합 표시 ✅ 2025-11-18
+- [x] 일정표에 선석계획이 겹치는 문제. 선석 하나당 2줄로 나눠서 표시 ✅ 2025-11-18
 
 
 
