--- a/다울 2025-10-27.md
+++ b/다울 2025-10-27.md
@@ -5,7 +5,7 @@ aliases:
 tags: [다울일간노트]
 ---
 
-- [ ] 나스 솔루션 link, source 백업하기
+- [x] 나스 솔루션 link, source 백업하기 ✅ 2025-11-13
 지난 주 금: [[다울 2025-10-24]]
 Tomorrow: [[다울 2025-10-28]] 
 
@@ -13,7 +13,7 @@ Tomorrow: [[다울 2025-10-28]]
 
 
 ## 오늘 작업 목표
-- [ ] 순천대 교육 📅 2025-10-31. 교육출장 올리기. 결재는 상무님
+- [x] 순천대 교육 📅 2025-10-31. 교육출장 ✅ 2025-10-31
 
 
 
